:bento: Introduce rewritten story into project
This commit introduces the rewritten story that has been worked on
for the past few weeks following the introduction of the prototype.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shounin/Story Source/ch02.md
+++ b/Shounin/Story Source/ch02.md
@@ -1,269 +1,299 @@
-I can't believe it's nearly been a week since I last received the letter from that... hammer and agreed on a first date at Le Papillon's Pâtisserie. This is all so surreal; I can't believe anything that's happening right now. I'm not completely nervous because I've gone on dates before. But there's this feeling of doubt.
+I can’t believe it’s already Saturday, let alone that my plan worked last night. Katorin can’t really believe it, either, but at least I didn’t come off as a serial killer or anything. He even said I was a cute hammer… *hehe…*
 
-I check the time on my watch: 5:39 PM. It's only just a couple of minutes before the hammer shows up. I take a seat on a bench nearby and look off to the distance. A lot of cars drive down the road to the waterfront. It's not unusual for a Friday night, but it's interesting to watch.
+I check my watch: *5:39 PM*. Just a few minutes before Sam arrives. I’m not really nervous or anything because they seem to like me anyway. Though I hope they’re okay with my outfit. I couldn’t just re-wear my dress from last night, and this was the closest for an all-black outfit. I sit patiently in front of Sun Valley Café, waiting for Sam to arrive.
 
-A few minutes pass, and I eventually see the hammer walking down the sidewalk, looking around. They eventually spot me on the bench; that is, it appears that way, given the head tilting backwards. I get up and walk over to them at the entrance of the pastry shop.
+The ocean sparkles in the sunlight as it crashes against the shoreline. This evening feels magical. I watch the waves, being entranced by their routine of crashing into the beach.
 
-"What should I say?"
+The peace doesn’t last for long, as I feel a tap on my shoulder. Surprisingly, I am greeted by Jordan's presence instead of Sams's. I lightly yelp.
 
-- "I didn't think you'd wear the hammer costume again."
-    - Hammer: "I, uh, like to keep things consistent, I guess."
-- "You're the same person that knocked on my door last week, right?"
-    - Hammer: "Yup, that would be me!"
-- "You look like you're ready to build something."
-    - Hammer: "Haha! I'll take that as a compliment."
+Jordan: "Oops, didn't mean to scare you. I take it you were expecting someone else."
+Chelsea: "Yeah, sorry for the knee-jerk reaction there."
+Chelsea: "I’m expecting my date in a few minutes. You met Katy’s colleague, Sam, right?"
+Jordan: “Oh, you managed to score date with them. That’s nice.”  
+Jordan: “Did Katorin set that up? Also, why are you wearing your hammer helmet?”  
+Chelsea: “I set it up, more or less, and they’re fine with me wearing it. They already know who I am.”  
+Jordan: “… I won’t dig too deep, then. But I’m glad you’ve finally gotten a date.”  
+Jordan: “I’m sure you two would make a good couple.”  
+Jordan: “Speaking of which, looks like they’re coming this way.”  
+Jordan: “Have fun; I’ll talk to you later.”  
+Chelsea: “Thanks, Jordan!”
 
-Hammer: "It's good to see that you don't look plastered like the last time."
-Player: "Thank goodness. The drink Katorin bought me was strong."
-Hammer: "I heard."
+Jordan walks the other direction as Sam inches closer. I wave at them and they wave back.
 
-The hammer lightly giggles.
+Sam: “Hey, sorry if I’m a little late.”  
+Sam: “I almost had a problem with my kitchen sink.”  
+Chelsea: “Oh, that’s fine! Happens to me all the time.”  
+Chelsea: “My house is super old and needs constant maintenance.”  
+Sam: “Sounds like you’re all too familiar with it.”  
+Chelsea: “I really want to move over to this side of town.”  
+Chelsea: “My father used to live a block away from where I am on Collins.”  
+Chelsea: “But now that he’s moved, I don’t really have a reason to be at the old place.”  
+Sam: “What’s stopping you from coming to this side of town, then?”  
+Chelsea: “I don’t really feel like packing everything up right now...”
 
-(Choice)
+Sam lightly chuckles.
+Sam: “Shall we head inside?”  
+Chelsea: “Yeah, I’d like that.”
 
-- "Are we heading to a costume party?"
-    - Hammer: "No, no, not at all! I'm sorry if I confused you."
-    - Hammer: "I just like wearing this one a lot."
-- "Do you want to head inside?"
-    - Hammer: "I'd love to so I can grab some pastries for my father."
-    - Hammer: "But maybe a bit later. I don't want them to get particularly stale."
-- "Where are we headed?"
-    - Hammer: "I, uh, didn't really plan this far..."
-    - Hammer: "I'm sorry if I disappointed you in not having prepared anything."
+The two of us walk to the café entrance. I open the door and hold it for Sam as they enter, letting the door gently close as I follow behind.
 
-Hammer: "Umm... how about we head down to the waterfront?"
-Player: "Fine by me."
+The café seems quiet this evening. A couple of people sit at some tables, talking to each other with lattes in hand. The barista from behind the counter is busy making coffee. I notice a pianist playing some classical music towards the back of the café. Instantly, I recognize the piece being performed.
 
-The two of us start sauntering down the road, and I manage to get a side profile of the costume. They must've spent hours designing the helmet and getting the circumference of the dress piece just right.
+Chelsea: "Ooh, this is one of my favorites..."  
+Sam: "You like classical music?"  
+Chelsea: "A little. Mostly contemporary classic."  
+Chelsea: "This piece is just so calming."  
+Chelsea: "It reminds me of this one video game I played a couple of months back."  
+Sam: "What video game was that?"  
+Chelsea: "I can't remember the name, but it was a puzzle game. Pretty trippy."  
+Sam: "Do you remember what it was about?"  
+Chelsea: "Something about dreams. The rest is kinda blurry."  
+Chelsea: "The only thing that's fresh in my mind right now is the music."  
+Sam: "That's fair, I suppose."  
+Chelsea: "I should probably find it and play it again! I have it on my little console somewhere."  
+Chelsea: "Maybe you'll be able to watch some time."  
+Player: "Sounds like fun."
 
-Player: "Your costume is extremely detailed. May I ask who made it?"
-Hammer: "Well, that would be me! And thanks."
+Sam steps over to the counter and look at the menu. I follow behind, ignoring the glass case.
 
-Player: "You did?"
-"You have quite some artistic talent."
-Hammer: "That's... a first I've heard from someone."
-Player: "A first?"
-Hammer: "Not a lot of people really appreciate the blood, sweat, and tears I pour into these things..."
-Hammer: "It's complicated."
-"It looks cute on you, or whatever I can see on you."
-The hammer giggles.
-Hammer: "I guess you think hammers are cute, then."
-Player: "Well, I can tell you spend a lot of time making a costume that fits you."
-Hammer: "I try. Not a lot people really see that, though..."
+Sam: "Would you like anything from the case?"  
+Chelsea: "I had some dinner a little earlier. Thanks for the offer, though!"
 
-Hammer: "I'm not really sure if that's a good topic for a first date, though."
-Player: "Alright, fair enough."
-Player: "Say, will I get to see what you look like without the costume?"
-Hammer: "Maybe. I guess that depends on how long this lasts."
-Player: "Alright, then. Keep your secrets."
+As soon as the barista is finished and sets aside the previous orders, he comes up to the counter.
 
-The hammer giggles again. We turn on Sun Valley Road in the general direction of my apartment.
+Barista: "Sam! I didn't expect you to be here at this hour."  
+Player: "I'm on a date, believe it or not."
 
-Hammer: "The waterfront's nice this evening. I don't really get to see it often."
-Player: "Really? I'm surprised. I nearly see this every day."
-Hammer: "Oh, you live on the waterfront?"
-Player: "Yup, over there."
+The barista looks over to me and smirks.
 
-I point to my apartment building.
+Barista: "I didn't realize you loved your tools that much."  
+Sam: "I didn't realize you'd care that much about it, Mark."
 
-Hammer: "Oh, that's nice!"
-Hammer: "You get to see the waves crash onto the beach all the time."
-Hammer: "I'm a little jealous, hehe..."
-Player: "It's nice to see the view from out the window."
+I giggle. Mark looks in total shock and is unable to come up with a witty comment in time.
 
-Hammer: "Ah, now you got to rub it in my face, you!"
+Mark: “Chelsea, is that you?”  
+Chelsea: “What gave it away?”  
+Mark: “I recognize that little coyote giggle from anywhere.”  
+Chelsea: “Alright, you caught me.”  
+Mark: “You trying to do some secret lover thing with Sam here?”  
+Chelsea: “Nah, I just felt like wearing this.”  
+Mark: "Well, Let me take your order real quick. You want your usual, or...?"  
+Sam: "A small mocha latte is good for me, actually."
 
-- "You can see it from my apartment sometime soon."
-    - Hammer: "Well, I guess that's true..."
-    - Hammer: "But still, no need to rub it in..."
-    - The hammer pokes my chest jokingly.
-    - Player: "Well, my apologies if I'm being too problematic."
-    - Hammer: "Ahaha, it's fine. I'm just teasing."
-- "Why haven't you moved down to the waterfront?"
-    - Hammer: "It's kind of a long story, but I just haven't found an affordable place."
-    - Hammer: "It kinda sucks being on the other side of the city, but it has its benefits, too, I suppose..."
-    - Player: "Other side of town?"
-    - Hammer: "Uh, yeah, just off of Collins."
-    - Player: "Wow, that far out..."
-    - Hammer: "It's not too far from where my father lives."
-    - Hammer: "Just more convenient to go around the block than across town."
-    - Hammer: "But my father's moved to somewhere else now, so there's no real reason to be where I am."
-    - Hammer: "I'm sure I'll get over here someday!"
+Sam looks toward me, awaiting a response.
 
-Player: "I guess you really enjoy the water."
-Hammer: "Yeah..."
-Hammer: "It's funny, really. My friends always think I'd *hate* being anywhere near water."
-Player: "Why's that?"
-Hammer: "Eh, long story."
+Chelsea: “I’ll take the same thing.”  
+Sam: "Double that."
+Mark: "Don't worry about that second one. It's on the house."
 
-We stop for a brief moment, near Sun Valley Café. I usually swing by there every morning to grab some coffee on the go. Thankfully, it's on the way to work.
+*What? No way…*
 
-Player: "You want to head into the café?"
-Hammer: "Ah! I, uh, I'm not sure..."
-Player: "Is coffee not your thing, or... ?"
-Hammer: "No, no, no, it's nothing like that! I actually don't mind a good cup."
-Hammer: "It's just, uh..., it'd be a little tricky for me to... enjoy it..."
-Player: "You're really insistent on wearing that costume the entire time, aren't you?"
-Hammer: "Ehehe... maybe..."
-Player: "You don't need to drink anything if you don't want to."
-Hammer: "How about we do that next time? I promise I'll have a solution by then!"
-Player: "Umm… What do you mean?"
-Hammer: "I'll make some alterations."
-Player: "Isn't that overengineering the solution? You could just take off your helmet."
-Hammer: "Well, yeah, but..."
+Sam: "Oh, well, thanks. I would've-"  
+Mark: "Don't stress it, buddy. You focus on keeping this hammer happy."
 
-I'm not going to get anywhere with this hammer at this rate, it seems. They're insistent on this whole anonymity scheme.
+I swipe my card to pay for my drink and watch as Mark steps away from the counter to make the order. Sam and I walk away from the counter and sit at a nearby table.
 
-Player: "I'm sorry for pushing it. I get it, if you're trying to go for one of those blind date kind experiences."
-Hammer: "What? Oh, it's nothing like that, it's just..."
-Hammer: "This is kind of the first time I've really gotten this far in a relationship."
-Hammer: "I just don't wanna screw it up."
-Player: "Huh. So you're saying this whole costume thing is the result of that?"
-Hammer: "Well, yeah..."
-Player: "You know, you didn't have to go through all this trouble. You already did the hard work of even just asking me out."
-Player: "I feel like we've settled it as is. But if you want to keep the anonymity for now, I don't mind."
-Player: "I just don't want you to get the impression that taking off your helmet is going to turn this around all of a sudden."
-Hammer: "Ehe, but that's the thing... I know it will."
-Hammer: "But thanks for at least understanding."
-Player: "Let's just skip the café, then. I guess we can just head up to my place."
-Hammer: "Uh, are you sure about that?"
-Player: "Whoa, nothing like that! I could take you somewhere else, but it'd be dark by the time we get there."
-Player: "And besides, I can't think of any place to take you."
-Hammer: "That's fair, I suppose. Sorry for being so stubborn."
+Sam: "Does Mark know you that well?"  
+Chelsea: "Doesn't he know everyone?"  
+Player: "True..."
+Chelsea: "Sorry to disappoint. I like mysteries, especially murder mysteries."  
+Chelsea: "Nothing like getting cozy on the couch and getting caught up in a good 'whodunit'."  
+Sam: "You seem like the mystery murder kind of being, so it tracks."  
+Chelsea: "I do need to go back into the library sometime next week to check out some new ones."  
+Chelsea: "I'm hoping they have the next one in the series. Been a real page turner for sure!"  
+Sam: "... I thought you meant a series you were watching. Whoops."  
+Chelsea: "Haha, it's fine! I don't really do TV."  
+Chelsea: "The closest you'd find me watching would be videos on YouTube."
 
-The two of us keep walking until we reach the intersection between Sun Valley Road and Federighi Avenue. After turning the bend and walking up to the entrance, I guide the hammer through the complex all the way to my apartment. I open the door and hold it open to let the hammer pass through.
+Mark places two cups on the counter and signals me to come over.
 
-Hammer: "Wow, this is really tidy!"
-Player: "I try."
+Sam: "One moment while I grab the lattes."
 
-I close the door as I walk into my apartment.
+Sam walk over to the counter and grab the cups and strikes a small conversation with Mark again. It almost looks like those two are involved in something…
 
-Hammer: "How much did the furniture cost?"
-Player: "Oh, umm... I don't remember. I got it about five, maybe ten, years ago."
-Hammer: "Oh..."
-Player: "There's a furniture store in the area. I think it's by the dealership on Narock Boulevard."
-Hammer: "Down there? Huh, I haven't seen it in the time I've been down there."
-Player: "I guess they might've closed, then."
-Hammer: "That's a shame. I would've loved to get something like this."
-Hammer: "So clean and modern... my place looks like it came out of the 1800s."
-Hammer: "I can't complain, though. I got the furniture with the place."
-Player: "Can't really beat that, I guess. Here, take a seat."
+Mark smirks at me as Sam walks back to the table.
 
-I gesture to the couch as I stand near the armchair.  While I take a seat in the armchair, the hammer walks over to the couch, takes their shoes off, and sits on the couch, legs up and tucked away.
+Chelsea: "What was that all about?"  
+Sam: "Mark just told me some stuff, that's all."  
+Chelsea: "Oh. I hope it was good."
 
-Hammer: "The cushions feel really nice."
-Player: "Yeah. Sometimes more comfortable than my bed."
-Hammer: "Mine at home is a little flat. I guess it's so old that they've flattened over time."
-Hammer: "Doesn't really help my-, uh, behind."
-Player: "You don't need to filter yourself."
-Hammer: "Ahaha, it's a little more complicated than that."
-Player: "Alright, if you say so."
+Sam hands me a cup and sits down.
 
-The hammer adjusts themselves a little.
+Sam: "So, you're not a TV person..."  
+Chelsea: "Oh, right. Yeah, I don't really like doing TV."  
+Chelsea: "I don't really get how people can watch that for hours."  
+Chelsea: "Especially reality TV. I can't stand that."  
+Chelsea: "Just as bad as the romance novels my mother reads. Yuck."  
+Sam: "You got a distaste for romance novels?"  
+Chelsea: "As much as I do my mother, Sam."  
+Chelsea: "She's against everything I am and everything I stand for."  
+Chelsea: "No wonder my father and her got a divorce when I was a pup."  
+Sam: "I'm sorry to hear that."  
+Chelsea: "Don't fret over it, Sam. It's not productive, really."  
+Chelsea: "I don't let it bother me anymore."  
+Chelsea: "Besides, I'm in a good place that accepts me and have a loving, supportive father."  
+Sam: "Well, that's good."
 
-Hammer: "So, uh, [Player]... did you have a good time last week?"
-Player: "Eh? What kind of question is that?"
-Hammer: "Well, last time I saw you, you looked like you were completely slammed."
-Player: "Oh, that. Well, I didn't expect Katorin to give me a drink that strong."
-Player: "I'm not much of a drinker, really. But I enjoyed the show."
-Player: "And I guess Katorin got her round of excitement from introducing me to the band."
-Hammer: "Oh, you got to meet the band! That must've been nice."
-Player: "It kind of was. Maybe not while being drunk, but still..."
-Player: "Oddly enough, the lead singer left early. Apparently they had some matters to tend to."
-Hammer: "Oh..."
-Player: "I sure got the shock of my life, though. I had thought they made an intricate costume."
-Hammer: "What kind of costume?"
-Player: "I thought the band decided to wear animal themed costumes for the night."
-Player: "Then one of the band members told me that the lead singer..."
+I look down at my cup. *I guess it’s time to take this helmet off…* I grab the front of my helmet, squeeze, and pull the helmet forward. It takes a second or two, but I eventually get it off.
 
-I lightly chuckle.
+Sam: “Ah, so you finally take off the helmet.”  
+Chelsea: “Of course, how else I’m gonna drink this?”  
+Sam: “True. Does pulling that helmet off hurt?”  
+Chelsea: “Not really. It is incredibly satisfying for my ears to stick up once I get most of the way, though!”
 
-Player: "yeah..."
-Hammer: "What about the lead singer?"
-Player: "They're an anthro. I almost forgot that a few live around here in New Rollinsport."
-Player: "Like, I have a few colleagues on the marketing team. They make some mean chili."
-Player: "Not once did I even question their origin."
-Player: "Man, I was really plastered that night..."
-Hammer: "Ah, well, you can't blame yourself for that."
-Hammer: "I'm sure the regulars would think the same."
-Player: "They were cute, though. That is, the lead singer, not my colleagues."
+I sip my latte and look out the window.
 
-The hammer giggles.
+Chelsea: "Hey, could we head down to the beach in a little? I'd like to get closer to the waves."
+Sam: "Sure, whatever you'd like."
+Chelsea: "Thanks. It's nice and soothing to sit there and watch."  
+Sam: “You looked like you were entranced by the waves earlier.”  
+Chelsea: “I was. Until Jordan tapped me.”  
+Chelsea: “Nearly yelped like a little puppy!”
 
-Hammer: "I know what you mean."
-Hammer: "Well, at least you had a fun night."
-Player: "I'd better have! We were celebrating the release of Project Snowflake."
-Hammer: "Oh, was that the building classifier thingy Katorin was working on?"
-Player: "Yeah, that one."
-Hammer: "That must've taken a lot of work."
-Player: "Yeah. Couldn't be prouder of my colleagues. We knocked it out of the park."
-Player: "Not even a single hotfix we had to deploy. Pretty rare for my job."
-Hammer: "Wow, uh, that must've been a relief."
-Player: "It kept me on edge for a while."
-Hammer: "Ahaha, I know that feeling a little too well."
-Player: "... you do?"
-Hammer: "It's a long story."
-Player: "You gotta start telling me these long stories someday, uh..."
-Player: "Sorry, I can't remember if you told me your name."
+We both lightly chuckle. This is definitely going well.
 
-Hammer: "Oh! Uh..."
-Player: "Calling you 'the hammer' seems a little on the nose."
-Player: "I guess you still want to remain somewhat anonymous."
-Hammer: "How about you call me 'Marteau' for now, at least until we get a little further into this relationship of ours?"
-Player: "Marteau? What kind of name is that?"
-Hammer: "It's the name of my character in a campaign for this tabletop game I've been playing with my friends for a few weeks now."
-Player: "Umm, sure, *Marteau*..."
-Marteau: "Look, my character's an inventor, alright?"
-Player: "... what does your name have to do with that?"
-Marteau: "It's, uh, French for hammer..."
-Player: "You know what? I can get behind that. Seems very fitting for you."
-Player: "I might call you Marty, then, on occasion. I'm not the best with French."
-Marteau: "That's fine. My friends do during sessions, anyway."
+---
 
-Player: "Man, it's been a while I've been in a campaign. Been waiting for Katorin to DM again, and it's been taking a while."
-Marteau: "Oh, Katorin's great! She's pretty creative."
-Player: "You've had a campaign with her?"
-Marteau: "Of course!"
-Player: "... have we met before, and I'm just not aware of it?"
-Marteau: "No, not at all."
-Player: "Huh. I thought we might've ended up playing together."
-Marteau: "Sorry. Maybe we will if she finishes doing all the prep work for the homebrew one she's been wanting to do for a while."
-Player: "Yeah, maybe we will."
+We spend some more time in the café and finish our lattes before making our way to the beach in front. Sam follows me to a spot in between the café and their apartment. I sit down, lean against the back wall, and crosses my legs. Sam take off their sandals and sits right next to me, placing their sandals on the other side.
 
-Marteau adjusts themselves, going into an almost laying position.
+Chelsea: "The water's so pretty this evening. I could watch it all night."  
+Sam: "It really is with the sunset."  
+Chelsea: "I'm surprised that not a lot of people are out and about on the beach."  
+Sam: "They're probably off somewhere else."  
+Sam: "There's probably some event I must've forgotten about."
 
-Marteau: "Ah, man, I could sleep on this thing..."
-Player: "I sometimes do. I won't be surprised if you doze off."
-Marteau: "Ah, I'll try not to! I have to still be awake for later."
-Marteau: "I still want to swing by that pastry shop before they close."
-Marteau: "Hmm, you know, I should probably get going."
+I lightly giggle.
 
-Marteau gets up from the couch and puts their shoes back on. I walk over to them as they stand up.
+Sam: "Hmm, it probably might be that small fair happening at Booty Park."
 
-Marteau: "Well, uh, thanks for the first date! I hope I didn't disappoint."
-Player: "Nah, you're fine, Marty. You want to do this again next week?"
+*Excuse me, but whaat? Booty Park?* I crack up, slightly hampered by my helmet.
 
-They come closer and brace for a hug. Their head rests on my shoulder.
+Sam: "What? It's a real park on Federighi."  
+Chelsea: "Is *that* what they called that park?"  
+Chelsea: "I want to meet the mayor that decided to name that park what it is."  
+Sam: "What for?"
+Chelsea: "So I could find out what he had that night, and where I can get some."  
 
-Marteau: "I'd love to. And I'll promise to figure something out, so we can head to that café."
-Player: "Sounds good to me."
+Sam laughs.
 
-We hold the hug for a few seconds before Marteau breaks away.
+Sam: "Only the good stuff, Chelsea. Only the good stuff."  
+Chelsea: "I'm sorry, you said something about an event happening at... "
 
-Marteau: "Well, off I go. See you later, [Player]."
-Player: "See ya, Marty."
+I stifle my laughter while trying to speak.
 
-Marteau starts to walk out the door before I interrupt.
+Chelsea: "... Booty Park."  
+Sam: "Yeah. I think they're holding a small fair there."  
+Sam: "Or maybe it's a swap meet, I'm not sure."  
+Sam: "It happens every couple of months."  
+Chelsea: "Well, this is the first I've heard such an event..."  
+Chelsea: "You know, it's hard staying on top of things while trying to be outgoing."  
+Sam: "You're doing great."  
+Chelsea: "Thanks for the validation."
 
-Player: "Oh, I wanted to say this the last time, but you ran off so quickly..."
+I lean in a little closer, falling short of landing my head on their shoulder.
 
-Marteau turns around.
+Chelsea: "Man, I can't believe it's August already! It feels like June was just starting yesterday..."  
+Sam: "I know. Where did the time go?"
+Chelsea: "Funny how time flies."  
+Sam: "Do you have anything planned for this month?"  
+Chelsea: "No, not really. Maybe going to some concerts, but not much."  
+Chelsea: "The fun stuff happens next month."  
+Sam: "What's next month?"  
+Chelsea: "Just some activities I've signed up for..."
 
-Marteau: "Hmm?"
-Player: "I like the color of your shoes. It fits well with your personality."
+I don’t really like talking a lot about my birthday, because it always feels like someone will turn into into a big ordeal. I’m not really comfortable telling them yet…
 
-They briefly look down at their shoes and look back at me.
+Sam: "I feel like there's something else in September..."  
+Sam: "I hope you're not too embarrassed to tell me. But if you don't want to, that's fine."  
+Chelsea: "Embarrassed? What gave you that idea?"  
+Sam: "You tilted your head down after I asked you about it. That and you're squirming a little."
 
-Marteau: "Oh, thanks! Teal's my favorite color."
+*Damn, he caught me red-handed!* I thought wearing this costume would’ve helped a little. I suppose my own self-expression is backfiring.
 
-Marteau waves and closes the door. I lean back in the armchair and look out the window. They're... definitely interesting. I'll have to see how the next date goes.
+Chelsea: "Alright, but you promise you won't tell anyone? I get anxious when more people know about it."  
+Sam: "Your secret is kept with me."
+
+I lean in closer. I really hope this doesn’t backfire on me…
+
+Chelsea: "I turn 100,000 next month."
+
+Sam ponders before realizing what I mean.
+
+Sam: "Oh... it's your birthday next month..."  
+Sam: "May I ask why you get anxious about it?"  
+Chelsea: "I... don't like drawing attention to myself around stuff like that."  
+Chelsea: "I'm fine with getting a few beers with some friends. I don't need the fanfare."  
+Sam: "I understand. Don't worry, I won't throw any surprise parties for you."  
+Chelsea: "Thanks. It means a lot to me."  
+Sam: "You're welcome. Also... you're nearly a hundred thousand years old?"  
+Chelsea: "What? No, where'd you get that from?"  
+Sam: "Well, you said that..."
+
+They stop mid-sentence. *I thought they were a programmer; shouldn’t they understand binary?*
+
+Sam: "That was binary, oh my god."
+
+I can’t help but cackle at that. I rest my hand on their shoulder as they facepalm.
+
+Chelsea: "Gotcha."  
+Sam: "So what you're saying is that you're turning 32."  
+Chelsea: "Yeah, I know, I'm getting old. No need to rub it in."  
+Sam: "Well, you certainly have a sense of humor tonight."  
+Chelsea: "This is just the tip of the iceberg."  
+Sam: "I'm in for a ride."
+
+I look at the sunset, which is sitting halfway on the horizon.
+
+Sam: "Also, when did you learn binary? Did Katorin drill that into your head or something?"  
+Chelsea: "No, no, I learned it elsewhere."  
+Sam: "Really? What for?"  
+Chelsea: "It's a long story."
+
+Surely I need to have something to have them look forward to.
+
+Sam: "I swear, you'll have a whole book's worth of content you're gonna have to tell me later."  
+Chelsea: "Who says I don't already?"  
+Sam: "True."
+
+Sam looks at my shows as the sun's rays light up the beach and my shoes by extension.
+
+Sam: "... aren't you afraid of getting sand in your shoes?"  
+Chelsea: “I clean these regularly, so not really.”  
+Chelsea: “I mean, I *wanted* to wear a pair of black shoes or something to complete the look.”  
+Chelsea: “Then I realized I don’t have any.”  
+Sam: “Oh, that’s fine, I’m not expecting anything…”  
+Sam: “You look cute with those shoes on.”  
+Chelsea: “Aww, thanks…”
+
+It’ll be a while before I could even begin to explain how much that means to me, but I’ll take what I can get. I look at my shoes while wiggling my toes briefly.
+
+Sam: “Is teal your favorite color?”  
+Chelsea: “Yeah, with orange as a close second.”  
+Sam: “That’s nice. I like a good shade of orange, too.”
+
+We stare at each other for a brief moment.
+
+Chelsea: “I like you; you’re fun.”  
+Sam: “Same. I think this is gonna work.”  
+Chelsea: “Hmm, maybe we should do one more, just to check?”  
+Sam: “How does Friday sound?”  
+Chelsea: “Works for me! Maybe we could try…”
+
+I stifle my laughter as I try to finish my sentence. *God, this is too funny…*
+
+Chelsea: “… Booty Park?”
+
+A small silence grows before I break face and cackle.
+
+Chelsea: “Sorry! I can’t help it…”  
+Sam: “Hold up…”
+
+Sam grabs my helmet and yanks it off. Thankfully, it doesn’t really hurt doing so, but I was caught off guard for a second.
+
+Sam: “Sorry, I just wanted to see you laugh.”
+
+I don’t really know what to say, so I just keep laughing. Sam cracks a smile on their face.
+
+---
+
+After spending another hour at the beach, we eventually part ways, and I make my way back to my house. Sam’s the right one for me; I can just feel it. Let’s see where this takes me.
