--- a/Shounin/Story Source/ch04.md
+++ b/Shounin/Story Source/ch04.md
@@ -1,229 +1,242 @@
-Friday evening rolls around the corner as quickly as it did last week. I feel confident that we'll progress further than before, given last week's date. I smile as I make my way over to Le Papillon Pâtisserie, carrying a small bag of chocolate squares I got from Zimmerman's Sweets. Conveniently, it's located a block or two away from the workplace, so it's easy to grab something on the way back after work. I notice that the waterfront seems nearly empty for a Friday night as I walk up. Not a single person is in sight.
+The timing couldn’t be more perfect; it’s a nice late afternoon for a Friday, and the weather feels just right. Sam and I agreed on meeting at my place near the Collins Highway, and I’ve made sure to make the yard look nice. In fact, I spent a lot of time re-decorating it for this occasion.
 
-As soon as I get close to the pastry shop, I find Marty sitting on a bench with a book. They seem to be reading pretty intensely, ignoring their surroundings almost entirely. I carefully make my way over to the bench and take a seat next to them.
+I happened to uncover a costume of mine in the closet that I *totally* forgot about as I was cleaning the house this morning. It was a Greek column costume I made a year or two ago for a performance. Top that with my outfit today, and I think I have the most hilarious prank for today’s date.
 
-Player: "Hey, Marty."
+I stand quietly in the yard, wearing my column costume. Trying to remain still and unnoticed, I stand in the front yard. *Hmm, no sign of Sam yet…* I look down at my paws and give my toes a wiggle, just to make sure my sandals don’t look off. Then, out of the corner of my eye, I spot them. *This is gonna be fun…*
 
-Marty doesn't respond, completely entranced by the book. I lightly tap on their shoulder to get their attention. Marty looks up from the book.
+> A knocking sound plays.
+> 
 
-Marty: "Oh, hey. When did you get here?"
+Sam walks up to the front door and knocks. I try to remain as quiet and still as I can.
 
-(Choice)
+Sam: “A bit early, I guess.”
 
-- "I just sat down."
-    - Marty: "Oh, good. I thought I'd end up finishing this chapter by the time you'd get here."
-- "About a couple of minutes ago."
-    - Marty: "Really? I must've not noticed you."
-    - Marty: "Silly me, getting engrossed in this book!"
-- "What do you mean? I've been here the entire time."
-    - Marty remains silent, likely giving a smirk.
-    - Marty: "Ha, ha, [Player]. How long have you really been on this bench for?"
-    - Player: "You got me. I just sat down."
-    - Marty: "I see."
+Sam walks off to the side and steps into the yard, inspecting the tiny garden. So far, they don’t happen to notice me standing there. I can’t help but crack a smile and stifle any giggling as best as I can. I bounce the zipper with my big toe to try and keep my composure.
 
-Marty closes the book and opens their purse, ready to put the book inside. I glance at the cover. It reads 'After the Mirage'.
+Sam takes a seat in one of the lawn chairs and looks toward my direction. They pull out their phone, presumably to text me. *How cute…*
 
-Player: "Is that the book you wanted to pick up from the library?"
-Marty: "Yeah, I just went about thirty minutes ago."
+Sam: “I wonder where that pupper has gone…”
 
-I notice the bookmark sticking out halfway, lodged in the middle of the book.
+They keep sitting in the chair, checking their phone periodically. Something floats by the air, and I can’t help but sneeze. Instantly, Sam jolts.
 
-Player: "You're halfway through already?"
-Marty: "It's a real page-turner, [Player]! I thought I wasn't going to stop and totally miss you by mistake."
+Sam: “Holy crap! Chelsea, is that you in that pillar?”
 
-Marty puts the book into their purse.
+I start cackling. This was not the plan, but they managed to get startled, anyway.
 
-Marty: "I'm surprised the library had the latest in the series."
-Marty: "It usually takes them months to get the new book in after it start selling copies."
-Marty: "The librarians know me all too well."
-Player: "Haha, I bet they do."
-Marty: "Say, [Player], I wanted to know if we could head to Kellihim Park."
-Marty: "There's a spot I usually like sitting at."
-Player: "Sure, why not."
+Chelsea: “I didn’t even *plan* the sneeze and you still flinched!”  
+Sam: “Congrats, you startled me.”
 
-The two of us get up from the bench and start walking down the road until we reach Narock Boulevard. As we continue walking down Narock Boulevard, Marty looks around and spots the dealership across the street.
+Sam laughs it off and comes up to me.
 
-Marty: "How long has that dealership been there, [Player]?"
-Player: "For as long as I can remember. Why do you ask?"
-Marty: "I don't think I've ever noticed it, really."
-Player: "You seemed to know where it was two weeks ago."
-Marty: "Well, yeah, but I've never seen it in person, [Player]."
+Sam: “So what’s the story behind this costume?”  
+Chelsea: “It was for a performance a year ago. I totally forgot I had it until I cleaned the house this morning.”  
+Chelsea: “So I figured I’d give you a good prank!”  
+Sam: “Yeah, well, mission accomplished.”  
+Chelsea: “What? I’m a anthro-cotoye; could you really expect anything less.”  
+Sam: “True, I suppose. I didn’t think you’d pull the stereotype card, though.”  
+Chelsea: “Haha, funny. It’s just for this one time.”
 
-Marty: "I wonder what kind of cars they sell."
+Sam looks up and down, likely noticing that I’ve been bouncing the zipper on and off.
 
-- "Who knows, really?"
-    - Marty: "Maybe they capitalize on extended car warranties."
-    - Player: "They probably do."
-- "Extended car warranties, probably."
-    - Marty: "Right, the only business to get into nowadays."
-    - Marty snickers.
-- "Cars."
-    - Marty: "Well, aren't you Captain Obvious?"
-    - Marty shoves me and laughs a little.
+Sam: “So, am I stuck with a Greek column for the rest of the night, or…?”  
+Chelsea: “Of course not! Would you like to do the honors?”  
+Chelsea: “This column has a little surprise inside…”  
+Sam: “I, uh…”  
+Chelsea: “Oh, come on. *Pleease?* It’s gonna be more work if I do it myself…”
 
-I follow Marty to the spot in Kellihim Park where they wanted to take me. A bunch of trees surround the spot, allowing the sunlight to peek through the leaves. The lush, green grass takes in the sunlight and glows a little. Marty sits down next to a tree and pats to an open spot next to them. I follow and take a seat next to them, leaning against the tree.
+Sam sighs, defeated.
 
-Player: "Wow. How often do you come here?"
-Marty: "Eh, about once a month. Maybe every two weeks."
-Marty: "It just kind of depends on the occasion."
-Player: "Well, you certainly have a knack for finding these sorts of places."
-Marty: "I guess I know where to look when I need some space."
+Sam: “Fine. But only because you asked nicely.”
 
-Marty sits up and unties their shoelaces.
+Sam grabs the zipper that I’ve been bouncing and gently pulls upwards, allowing me top step outside and let the costume fall to the ground behind me. A small breeze lets my dress flow a little bit. Sam’s eyes sparkle as they gasp briefly.
 
-Marty: "It feels like I've been walking forever today. I hope you don't mind."
+Sam: “Oh! You even matched your outfit…”  
+Chelsea: “I felt like wearing this dress today.”
 
-I look at the trees as Marty takes off their shoes, placing them to the side. A few moments later, I hear something being zipped up. I turn and notice that their feet had been tucked away into a small stub, with a zipper going around the circumference of the dress.
+I grab the costume from the ground and bundle it up. I smile and put the costume under my arm.
 
-Player: "Is that a new addition to the costume as well?"
-Marty: "Oh, no, it's always been there. Just tucked away."
-Player: "Huh. You really do think of everything when making these things."
-Marty: "I thought about doing the same thing for the sleeves. I don't have enough fabric or zippers to do it, though."
-Player: "I think you look fine with the sleeves intact."
-Marty: "Well, thanks..."
+Chelsea: “You want to come inside? I prepared some tea.”  
+Sam: “Sure, as long as you didn’t booby trap it.”  
+Chelsea: “Very funny.”
 
-Marty scoots closer to me and leans against my side.
+I put my hand on Sam’s back as we walk up to the front door. As I open the door, Sam walks inside, allowing me to close the door from behind.
 
-Marty: "I hope this isn't too awkward for you."
-Player: "Normally, if someone in a costume like that decides to lean up against me, I would be weirded out."
-Player: "But you're an exception to the rule."
-Marty: "Aww, I get special exemptions! How sweet of you."
+Sam: “Wow, this place is… a lot bigger than I thought.”  
+Chelsea: “Yeah, I know. I think this place was supposed to be a mansion or something.”  
+Chelsea: “But I’m paying typical rent like it’s an apartment.”  
+Chelsea: “Plenty of maintenance to do, though.”
 
-The two of us laugh wholeheartedly.
+Sam hangs their coat up on the coat rack. I gently toss the costume onto the nearby chair, barely making it into the seat.
 
-Marty: "There is some meaning to me wearing this costume and not another, though."
-Player: "Is this another long story?"
-Marty: "Well, yeah, but we have the time here."
-Marty: "But I'd like to know what's in your little bag there before getting started."
-Marty: "You've piqued my interest."
-Player: "Alright."
+Chelsea: “You want a cup?”  
+Sam: “That sounds nice, thanks.”
 
-I pull out the box of chocolate square from the bag and put it on my lap. I hear Marty gasp lightly.
+Gently, I pour a cup from the kettle on the table and hand them the cup. 
 
-Marty: "Oh, you got the good stuff, didn't ya?"
-Player: "Perhaps."
+Sam: “Thanks.”
 
-I open the box, pull out a chocolate square, and eat it. Marty points to the box.
+We walk toward the living room and take a seat on the couch while Sam carefully take a sip from their cup.
 
-Marty: "May I?"
-Player: "Of course. I didn't buy the box to eat them myself."
+Sam: “Ooh, raspberry.”  
+Chelsea: “I’m still going through all of my fruit ones.”  
+Sam: “Gotcha. I thought you’d be the earl gray kind of person.”  
+Chelsea: “Not always. I like to spice things up a little.”
 
-Marty unzips the bottom of the helmet front, takes a chocolate square, and pops it in their mouth.
+I grab my cup from the coffee table, take a sip, and place it back on the saucer.
 
-Marty: "Mm, you got the dark chocolate ones."
-Player: "It's a variety, actually."
-Marty: "Hmm, I see. Any particular one you like?"
+Sam: “So, no other costume surprise?”  
+Chelsea: “I already had my fun being a column and startling the living daylights out of ya.”  
+Chelsea: “Besides, today feels like a day for wearing these sandals.”  
+Chelsea: “I might hop into my burrito costume if it gets late, though.”  
+Sam: “Hmm,  I see. Didn’t feel like wearing your sneakers, eh?”  
+Chelsea: “Yeah, you could say that.”
 
-I pick one of the chocolate squares with the darker tone. As soon as I hand it to them, they lean in and grab the square with their mouth. I watch as the square slides in like a slot-loading CD drive. Marty giggles in enjoyment.
+Sam takes another sip from their cup.
 
-Marty: "This one's good, too. I should stop, though."
+Sam: “I’m guessing you have some idea in mind if you had enough time to plan out the prank.”  
+Chelsea: “Uh, yeah. I was thinking of having some casserole and maybe playing a game or two, if you’re fine with that.”  
+Sam: “Like a board game?”  
+Chelsea: “Either or.”  
+Sam: “Sure, works for me.”
 
-Marty zips the hole back up and scoots closer to me as I put the box next to the bag. We stare at each other for a little while before they break the silence.
+I get up from the couch and turn around, eyeing the oven.
 
-Marty: "God, I can't help but keep looking into your eyes, [Player]."
-Player: "I wish I could say the same, but..."
-Marty: "Yeah, I know... Soon, [Player], soon."
-Marty: "This is gonna be a weird question to ask, but could I cuddle with you?"
-Player: "Uh, sure..."
+Chelsea: “That casserole should be done any moment now.”  
+Sam: “You need help with grabbing plates?”  
+Chelsea: “Oh, no, it’s okay. I already have some set aside.”  
+Chelsea: “You don’t have to do a thing.”
 
-Marty scoots closer to me and lifts themselves up, propping their legs on top of mine. I move my arms and hug them.
+I walk over to the oven, looking at the casserole. It looks finished, so I pull it out from the oven and carefully stab it to see if it cooked all the way through. Thankfully, it appears to be ready. I separate the plates and gently place one slice on each. I make sure to grab some silverware before heading to the couch with plates in hand. I hand Sam one of the plates.
 
-Player: "So... about this hammer story..."
-Marty: "Right… this is something that not a lot of people know about me."
-Player: "I won't spread it."
-Marty: "Ahaha, it's not a deadly secret, [Player]."
+Sam: “Thank you.”
 
-Marty adjusts themselves.
+Sam grabs a fork from my other hand before I sit down, unstrap my sandals, and bring my legs up. I notice Sam taking a corner and eating it, watching as they smile and radiate warmth.
 
-Marty: "I like to do some light coding on the side."
-Player: "Really? I wasn't expecting that."
-Player: "Guess that explains the whole binary thing last night, too."
-Marty: "It's just more of a learning thing, really. I don't do a whole of it."
-Player: "What kinds of things do you do?"
-Marty: "Mostly web development with C#. And some mobile apps."
-Player: "Huh, that's interesting. How does the hammer fit into..."
+Sam: “That’s good.”  
+Chelsea: “Thanks. It’s my father’s recipe.”  
+Sam: “He knows what he’s doing, that’s for sure.”
 
-I pause for a moment and look at Marty, now in the optimal cuddling position. Suddenly, it clicks.
+I take a quick bite from my slice. *Thank goodness they like it…*
 
-Player: "Ohh... I get it."
-Player: "You're a hammer because of the Hexcode icon, aren't you?"
+Chelsea: “You know, I probably have to introduce Papa to you at some point.”  
+Sam: “I already met him. He has the alterations shop across the street from Nodar’s Dealership.”  
+Chelsea: “I… uh…”  
+Sam: “He already knew that we were dating, somehow. Cool dude.”  
+Sam: “I can easily see where you picked up the needlework from.”
 
-Marty giggles.
+I giggle, partially in disbelief.
 
-Marty: "Believe me, everyone will still be at the tip of the iceberg when they find out how nerdy I really am."
-Player: "That's clever."
-Marty: "My father made me an accompanying blanket."
-Player: "That's adorable."
-Marty: "Well, now you and I share the inside joke."
-Player: "Do you get hot at all wearing this?"
-Marty: "Warm? Sure. But not hot; it's pretty airy wearing this."
+Chelsea: “Well, I didn’t exactly tell him *who* I was dating…”  
+Sam: “I guess he figured out when I talked with him on Monday. He was awaiting a shipment or something, so we just chatted a little bit.”  
+Sam: “He seems to really like me, so I think we’re totally fine.”  
+Chelsea: “Huh. I wonder why Papa didn’t say anything about it.”  
+Sam: “Probably didn’t want to get in the way or something.”
 
-Marty leans their helmet against my shoulders.
+Sam takes another bit from their slice of casserole.
 
-Marty: "Hehe, you're nice and warm..."
-Marty: "I'm sorry if this is awkward for you."
-Player: "Awkward? Not really."
-Marty: "I'm a cuddler. And a toe wiggler, too, apparently."
-Marty: "My closest friends say that I wiggle them a lot more than others do."
-Marty: "I'm sorry for the weird fact. I don't know why I thought of it."
+Chelsea: “Well, I guess that settles it. One less thing for me to worry about…”
 
-I notice the zipper on their stub move up and down slightly.
+I take a bite from my slice, still pondering. *This is really, really awkward…*
 
-Player: "Huh. I guess I didn't notice it."
+Sam: “I can tell he’s very supportive of you. He had a lot of positive things to say.”
 
-Marty: "You probably think I'm weird, don't you?"
+I smile and giggle.
 
-- "Aren't we all?"
-    - Marty: "Hmm, you have a good point."
-    - Marty: "Do you think I'm weirder?"
-    - Player: "You're fine just the way you are."
-- "I'm weirder than you."
-    - Marty: "Really? I don't think so."
-    - Player: "Agree to disagree."
-- "I don't think you're weird at all."
-    - Player: "You're fine just the way you are, Marty, even if you're hiding in a hammer costume."
-    - Marty: "You're too kind, [Player]."
+Chelsea: “Yup, that’s definitely Papa!”  
+Chelsea: “I remember him spending countless hours researching family doctors when I was young.”  
+Chelsea: “I’d sometimes hear him mutter to himself when I went to get a glass of water.”  
+Chelsea: “All those sleepless nights for him just so that we had a family doctor that could help me transition.”  
+Chelsea: “I don’t think I’d ever seen him so happy the moment he walked into my room after the surgery.”
 
-Marty adjusts themselves and looks me in the eye.
+Sam takes another bite, looking at me with intrigue.
 
-Marty: "I could totally kiss you right now."
-Marty: "I don't know how well that would work, though. I've never done it before."
-Player: "I guess we'll cross that bridge when that helmet comes off."
-Marty: "You know, [Player], I had some doubts in my mind when I handed you that letter."
-Marty: "That this wasn't gonna work out."
-Player: "I'd say it's pretty successful so far."
-Marty: "Well, [Player], the more I hang out with you like this, the more confident I feel that my doubts are wrong."
-Marty: "Granted, there are still some things we need to explore for my sake, but..."
-Marty: "I think I might be falling in love with you, [Player]."
-Player: "Well, I could say the same myself. You are a rather charming individual."
-Marty: "Charming? That's an unusual word to describe a hammer."
-Player: "Well, last I checked, hammers don't have toes they can wiggle."
+Chelsea: “We’re really close, Papa and I…”  
+Chelsea: “He comes here every Wednesday for board games with me and my friends.”  
+Chelsea: “Oh! You should come one night! I think you’d really like it.”  
+Chelsea: “Just a fair warning, though: Papa’s really fierce at playing Monopoly.”  
+Chelsea: “If I’d say so, probably just as good as some of the big tech corporations out there.”  
+Sam: “I can’t tell if that’s an invitation or a warning…”
 
-Marty giggles softly.
+I giggle and take another bite from my casserole slice.
 
-Marty: "You're funny, [Player]."
+Sam: “I’d love to come, though. Wednesday night should be free.”
+
+I smile in lieu of verbally responding.
+
+Sam: “Speaking of which, you have a specific game in mind?”
 
 ---
 
-A few hours pass, and I open my eyes, realizing I had fallen asleep in the park. Marty's sound asleep on me, being completely still. I lightly tap on their shoulder, waking them up gradually.
+> Some time has passed. Sam and Chelsea are cuddling together in the game room, playing a Witness-like puzzle video game on the TV.
+> 
 
-Marty: "Ugh... did I fall asleep on you?"
-Player: "Yeah, I think we ended up snoozing."
-Marty: "Ah. You make a good substitute for a bed, in that case."
+Chelsea: “What? How is that *not* the answer?”  
+Chelsea: “Am I going crazy? Is this real?”  
+Sam: “Looks plausible to me. I don’t really understand…”
 
-Marty swings their foot around to undo the zipper a little before bringing their legs behind them. I barely catch a glob of pink.
+We’ve been stuck on this puzzle for the past fifteen minutes. By now, Sam and I have been putting our minds at work (and cuddling, of course), but this is just unexpected. Because of how late it has gotten, I’ve swapped my dress for a nightgown and donned my burrito costume. Equal parts cuddle-worthy and comfortable. I’ve kept my head and paws out, though, because it’s kinda hard to see the screen through the fabric.
 
-Marty: "I just realized I have stuff to do tomorrow. Some shopping and what-not."
-Player: "Yeah, I promised Katorin I'd go with her to some local event tomorrow."
-Marty: "Sounds like fun."
-Player: "Debatable. You're more fun to be around, honestly."
+Sam’s also cool with it, too. 
 
-Marty laughs while putting their shoes on.
+Chelsea: “I… don’t…”
 
-Marty: "Well, I should get going now."
-Player: "Same. Where do you want to meet up next week?"
-Marty: "I'll text you by Monday on that. I'm kind of groggy right now and can't think straight."
-Player: "Fair enough. Goodnight, Marty."
-Marty: "Goodnight, [Player]."
+I huff in disappointment. *How? How is this possible?*
 
-We briefly hug for a moment before going our separate ways. As I walk through the park and make my way to the apartment, I think about what we talked about earlier. Marty seems confident in our relationship for the most part. I wonder what it is Marty wants to explore before they make the commitment. After tonight, I certainly wouldn't mind.
+Sam: “I have an idea. It’s a really dumb one, but I want to try it.”  
+Chelsea: “I’ll take anything at this point. Burrito unhappy.”
+
+I wriggle my arms out and hand Sam the controller. Sam tries the puzzle again, this time with a slight change in the solution. Surely, the puzzle accepts the solution, allowing us to progress in the area. I huff, this time in awe and confusion.
+
+Chelsea: “What? How did you…”  
+Sam: “I guess those were further apart than we first thought?”  
+Sam: “Either that or they’ve given up and said , ‘fine’.”  
+Sam: “Here’s the controller back.”
+
+I slowly take the controller out of Sam’s hands and slither back into my little cocoon.
+
+Sam: “How is the burrito feeling?”  
+Chelsea: “Not satisfied.”
+
+Sam pulls me closer and rubs the side of my arm as I move to the next puzzle in the set.
+
+Sam: “You want to play something else? I don’t want you to feel too stressed out.”  
+Chelsea: “It’s fine, I just…”
+
+I sigh, defeated.
+
+Chelsea: “This area *sucks*…”
+
+Sam smiles and chuckles.
+
+Sam: “Yeah, it really does.”  
+Sam: “Not this little burrito, though.”
+
+Sam pokes the sides of my stomach, and I squeal as a knee-jerk reaction.
+
+Chelsea: “Ooh, I wasn’t expecting that.”
+
+Sam smiles, and I end up solving another puzzle, purely by chance.
+
+Sam: “You’re one interesting pupper, you know that?”  
+Chelsea: “I know I am.”
+
+I lean up against Sam again and put my paws back on the ottoman. Gently, I wriggle out and hand Sam the controller. As Sam takes the controller from my hands, I slither back with my paws in the costume this time.
+
+Chelsea: “I think I’ve had it with this set. Your turn.”  
+Sam: “Fine by me. Did your paws get cold?”  
+Chelsea: “A little…”  
+Sam: “Gotcha. How does the burrito feel now?”  
+Chelsea: “Warm, cuddly, and satisfied.”  
+Sam: “That’s good enough for me.”  
+
+I smile and lean my muzzle against their shoulder. By now, I’m leaning against them with my paws on the couch.
+
+Chelsea: “I know I haven’t really said this a lot, but I appreciate you putting up with me.”  
+Chelsea: “People think I’m insane with the costume shenanigans I pull.”
+
+Sam wraps their arm around me and hold their hand where my right arm is.
+
+Sam: “Hey, as long as you’re happy with wearing costumes for self-expression, I’m cool with it.”  
+Sam: “I think you’re pretty cool either way.”
+
+I giggle and watch them continue to play through the puzzle set. I could do this for a long while; this has to be one of the best dates I’ve ever been on.
