--- a/Shounin/Story Source/ch05.md
+++ b/Shounin/Story Source/ch05.md
@@ -1,314 +1,165 @@
-Friday has rolled around, yet I haven't heard from Marty. I've texted once or twice to check in, but they've remained silent. Where should I meet them, if they've decided already? I hope they're doing alright... Maybe I'll run into them as I head to Sun Valley Café. I grab my keys and head out the door.
+I can’t see or feel anything anymore. I’ve isolated myself from the rest of the world, hiding away in a dark corner that no one will bother to check. I can scream and cry as loud as I want, but no one can listen.
 
-As I approach the café, I bump into someone obliviously. I step back and apologize, realizing that I had bumped into Katorin.
+I’ve been on this couch for days now, sobbing out a waterfall with no end in sight. I can’t bring myself to get out of the house, especially after that *monster* invaded my space. I’m drowning in my own tears like a lost puppy, unsure of where to go. I’m pretty sure this burrito costume of mine has absorbed every last drop. *I can’t let Sam see me like this…*
 
-Katorin: "[Player], hey!"
-Player: "I'm terribly sorry; I didn't notice you."
-Katorin: "Ahaha, it's fine."
-Player: "Are you alright?"
-Katorin: "From the bumping? Yeah, I'm fine."
+> A knocking sound plays.
+> 
 
-I know that tone; she's worried about something.
+*No… please, go away…* I lay in silence, praying that whoever’s at that door will leave.
 
-Player: "You seem worried about something else."
+> A knocking sound plays again.
+> 
 
-Katorin sighs.
+Sam: “Hello? Is anyone home?”
 
-Katorin: "I can't hide anything from you, can I?"
-Player: "You've done it before."
-Katorin: "Well, I guess I'm now obligated to tell you."
-Katorin: "Let's move to the side."
+*Crap: it’s Sam…* I whine quietly and stay still, hoping that they leave. Not that I want to scare them away… How did I end up in this mess?
 
-Katorin and I sit down at a nearby bench.
+Well, I guess I have to respond now. I begrudgingly get up from the couch and hop my way over to the door, falling short of opening it.
 
-Katorin: "So, you remember Chelsea, right?"
-Player: "The anthro-coyote, right?"
-Katorin: "Yeah. I haven't heard from her at all this week."
-Player: "Do you two text often?"
-Katorin: "Of course. We send each other memes."
-Player: "Huh. And she hasn't corresponded with you?"
-Katorin: "Not a word from her since last Sunday."
-Katorin: "Which is really weird, because she's been really chipper the past month or so."
-Player: "Really?"
-Katorin: "Really, [Player]. And now she hasn't responded to my texts."
-Katorin: "It's like she disappeared off of the face of the earth."
-Katorin: "I really hope she's alright. This is really unusual for her."
-Player: "Do you have any ideas on what could've happened?"
+Chelsea: “Sam, I-I’m not really in a g-good place right now…”  
+Sam: “Are you alright?”
 
-Katorin rubs her face, trying to keep calm.
+I try to form words, but I struggle to even form a cohesive thought. I slide down the door, sobbing again. *The pain… it hurts…*
 
-Katorin: "It could be anything, [Player]. Anything."
-Katorin: "I don't know what it could be."
-Player: "Did she say anything to you before disappearing?"
-Katorin: "No, not really. Not unless you count this meme."
+Sam: “I’m sorry, I didn’t realize…”  
+Sam: “Can I help in any way?”
 
-She pulls out her phone and shows me the latest message she sent me. I stifle my laughter.
+Do I tell them to leave and lay here in silence? Do I let them in? It hurts to even think about it.
 
-Player: "Huh, nothing. That's really weird."
-Player: "Do you want me to help look for her?"
-Katorin: "Aren't you supposed to be on a date right now?"
-Player: "That can wait. Besides, they haven't texted me back in a week."
+Sam: “I can come back another time, if you wish.”
 
-Katorin gives me a rather confused look as soon as we get up from the bench.
+*No, I’d better not.* I get up and gently pry open the door wide enough for them to get through. I slide down the wall again, barely keeping my tears in place as they slide through door and close it. Sam quickly looks around the old mansion before sitting on the floor right next to me.
 
-Player: "You look really confused."
-Katorin: "I-it's nothing. Just a silly thought."
-Player: "Have you tried swinging by her place?"
-Katorin: "I rarely go there. She lives on the other side of the city."
-Player: "That's not too bad from where you live, really."
-Katorin: "Well, no, but she's near the intersection between Bouchard and Collins."
-Katorin: "I don't like going there."
-Player: "Last I checked, there wasn't anything spooky going over there."
-Player: "Our best bet would be to check over at her place."
-Katorin: "Alright, let's do that."
-Player: "I'll follow you."
+Sam: “Have you been crying all this time?”  
+Chelsea: “M-maybe…”  
+Sam: “Here, let’s get you to the couch. The floor’s not gonna be that comfortable.”
 
-Katorin and I rush down to Federighi Avenue, make a turn, and keep running until we reach Collins Highway. Though a blur, I glance at Kellihim Park to see if either Chelsea or Marty were there. I didn't notice either one of them, though. We turn on to Collins Highway and keep running up the road until we make it to a Victorian-style house. As we slow down, Katorin takes a moment to catch her breath.
+Sam gently picks me up, carries me to the couch, and takes a seat while still holding me in their arms. Between sniffling and whimpering, I can barely form a sentence. Sam pulls me closer and rubs my arm. The warmth from their body and their movements somewhat calms me.
 
-Player: "I didn't think we'd be running over here."
-Katorin: "Believe me, I didn't want the panic to set in."
+Sam: “What’s going on?”  
+Chelsea: “M-my mother showed up…”  
+Sam: “Oh, God; I’m so sorry.”
 
-We make our way up to the house. I notice that, despite the structure being rather ancient, it looked well-maintained. Katorin knocks on the door with the knocker.
+Sam hugs me while I whimper.
 
-Player: "Chelsea owns this place?"
-Katorin: "She's renting for now."
-Player: "Wow. She does an excellent job with the upkeep."
+Sam: “That’s gotta be rough. Your father’s told me a little bit.”  
+Chelsea: “… you talked to him?”  
+Sam: “I went with Katorin to get her new blouse altered at his shop.”  
+Sam: “We chatted for a little bit, and he told me about your mother. I’m really sorry.”  
+Sam: “No one should have to go through that, ever.”  
+Sam: “I’m guessing things didn’t go well here if she showed up randomly.”
 
-We stand on the porch for a couple of minutes. No response.
+I try to muster up the courage to respond. I don’t want to relive the event. I don’t want it to hurt any more than it does.
 
-Katorin: "Is she even home?"
+Sam: “It’s okay if you don’t want to get into the details. I don’t want to see you in more pain.”
 
-Katorin steps off the porch and investigates the property. I wonder if Chelsea simply didn't hear the door. I step up, grab the knocker, and knock on the door with more force than Katorin. Katorin jolts and turns around.
+Sam keeps rubbing my arm and holding me close. The pain starts to slowly go away.
 
-Katorin: "Are you trying to break the door?!"
-Player: "Maybe she didn't hear you the first time."
-Katorin: "And what if she's not home?"
-Player: "Relax. The door's not going to shatter into two."
+Chelsea: “I-it hurts… it’s like she doesn’t see *me* anymore.”  
+Chelsea: “Just a shell of what she wants to see.”  
+Chelsea: “‘God damn it, Chester, why can’t you be normal for once?’ That’s all I’d hear her say.”  
+Chelsea: “She kept throwing things a-at me. Slurs, too.”  
+Sam: “That’s just horrible. I’m really sorry.”
 
-As I finish the sentence, the door opens behind me. I notice Chelsea leaning on the door with messy hair and watery eyes.
+I cuddle up closer to them, letting their warmth continue to put me at ease.
 
-Katorin: "Chelsea! Oh my God, are you alright?"
+Sam: “Well, I don’t care what she says, but you’re still a beautiful and quirky coyote.”  
+Sam: “Even if you’re a burrito right now.”
 
-Chelsea sniffles and falls into Katorin's arms as Katorin braces for a hug. She whimpers while trying to get back up.
+I let out a little whine, just shy of a giggle, while letting my head pop out the top of my burrito cocoon.
 
-Katorin: "I've been worried sick about you! What happened?"
-Chelsea: "I-it's a long story."
+Chelsea: “Thank you…”
 
-Chelsea stammers and struggles to get her words out.
+Sam rubs the side of my muzzle with their thumb. We stare into each other’s eyes for a short while, drowning out the rest of the world. *The pain… I can’t feel it anymore…*
 
-Katorin: "Come. Let's get you back inside."
+I rest my eyes for a bit and lean against Sam’s chest while they rub my arm. *Finally, I’m at peace again.* We stay in silence for a few minutes as I catch a moment of respite. However, it doesn’t last long when I feel Sam moving their arm. As I open my eyes, Sam reaches for their phone in their pocket. They look at the screen for brief moment before setting it next to the couch.
 
-Katorin hoists Chelsea back up and guides her inside. I follow the two into the house and close the door behind us. The living room feels antiquated, but it's almost hard to tell with the mess of tissues all around. On the coffee table in front of the old couch is a nearly-empty tissue box and a full cup of tea, likely cold at this point. I notice a book on the other end of the table. Seeing the title 'After the Mirage', I feel a bit queasy for an unexplained reason. Marty's a pretty fast reader, so maybe they gave Chelsea the book afterwards. A vinyl record spins on the old record player by the couch, playing "Mad World".
+Sam: “Weird, no calls or anything?”  
+Chelsea: “Did something happen?”  
+Sam: “I thought my phone vibrated, but I guess not.”  
+Chelsea: “Vibrated?”
 
-Katorin picks up Chelsea and puts her on the couch. I take a seat in one of the armchairs while Katorin sits right next to Chelsea, stroking her hair away from her eyes. It takes a second before Katorin realizes that the record player is running.
+I think for a moment, pondering what they felt. Then, it hits me…
 
-Katorin: "Have you been listening to this all day?"
+Chelsea: “Ah, s-sorry! I, uh…”  
+Sam: “Why would you be sorry? I don’t understand.”  
+Chelsea: “Your phone didn’t vibrate. That must’ve been me.”  
+Chelsea: “I… I’m an occasional compulsive toe wiggler.”  
+Sam: “Wait, what?”  
+Chelsea: “I fell asleep for just a second and I guess I…”  
+Sam: “It’s okay! You don’t need to apologize for anything.”
 
-Chelsea's eyes close partially as if to silently agree. I get up from the chair and walk over to the record player to stop the record from spinning.
+I scoot under Sam’s arm again.
 
-Katorin: "Oh, you poor thing..."
+Chelsea: “I’m sorry, it’s just… I get really conscious about it.”
 
-I put the record into the appropriately matched sleeve next to the player.
+I shuffle and kick a bit, struggling to find where the bottom zipper on the costume is.
 
-Katorin: "Thanks, [Player]."
-Katorin: "I hope you don't mind him being here."
+Chelsea: “Where… is the… bloody zipper on this… thing?!”  
+Chelsea: “*whimpers* I knew I should’ve used Velcro… ah, forget it!”  
+Sam: “You need help?”
 
-Chelsea: "I-it's fine..."
+I start whimpering again, placing my paws on top of Sam’s hands to prevent them from doing anything.
 
-Chelsea adjusts herself on the couch, trying to sit up. She buries her muzzle into her knees, ears down.
+Chelsea: “I can’t stand to look at my paws with this ugly nail color.”  
+Chelsea: “I-I haven’t painted my toenails since a few weeks ago, but I don’t have any nail polish…”  
+Sam: “Surely they aren’t that bad, right?”
 
-Chelsea: "Sorry for the mess..."
-Katorin: "Tell me what happened."
-Chelsea: "My... my mother showed up."
-Katorin: "Oh no..."
+Sam slides their hands from under me and gently unzips the bottom of my little cocoon, revealing my paws. I whimper again.
 
-Katorin hugs Chelsea awkwardly.
+Sam: “What do you mean? I think your paws look pretty with the natural color.”  
+Chelsea: “… you do? That’s…”
 
-Katorin: "I'm so sorry."
+No one’s ever said anything like that to me before. It feels so weird… but also so satisfying… I both giggle and whimper simultaneously.
 
-Chelsea whimpers again, falling short of crying. I take the cold tea from the table and walk outside to dump it. As I walk back inside and look for a nearby kettle, I hear Chelsea trying to talk to Katorin, struggling to keep composure.
+Sam: “You OK? You want me to zip this back up for you?”  
+Chelsea: “No one’s commented on my paws before…”  
+Sam: “Oh, my apologies. I’m not into that kind of thing if…”
 
-Chelsea: "A-and she just started screaming a-at me, calling me by my dead name."
-Chelsea: "She kept throwing things a-at me. Slurs, too."
-Katorin: "That's horrible. I'm sorry I wasn't there."
+For the first time in a week, I giggle.
 
-I eventually discover an electric kettle on the table by the staircase. I swish the kettle around and realize there's plenty of water. Furthermore, I eavesdrop a little as I put my hand over the spout to feel for any steam.
+Chelsea: “It’s fine, really! I just take pride in them.”  
+Chelsea: “You know, like how Katy’s proud of her, um, assets…”  
+Sam: “Oh, okay. Still not that kind of person, though.”  
+Chelsea: “It’s fine, I get it. I tend to stay away from those kind of people anyway.”  
+Chelsea: “Besides my besties, I think you’re the only person who’s made that kind of compliment without being creepy about it.”  
+Chelsea: “You know how many people make that kind of compliment and then get really weird with me about it?”
 
-Katorin: "How did this happen?"
-Chelsea: "I-I told Papa the-the thing..."
-Katorin: "How did your mother find out?"
-Chelsea: "H-he told me that M-mom bumped into him at the dealership."
-Chelsea: "I-I found this out w-weeks ago..."
+Sam smiles.
 
-The thing? Although intrigued, I stay away and reheat the water in the kettle and grab a chamomile tea bag from the box. As I wipe the sides of the cup, I listen a little more.
+Sam: “Well, I can only imagine.”  
+Chelsea: “It’s… rough. That’s why I just don’t say anything about it anymore.”  
+Chelsea: “That is, until now…”  
+Sam: “Hey, as long as you feel beautiful all over, I don’t mind.”
 
-Katorin: "I'm sorry. I'm sure he didn't mean for this to happen."
-Chelsea: "H-he didn't want to tell her at all..."
-Katorin: "So your mother forced him to tell her?"
-Katorin: "She's insane. I'm so sorry."
+I lightly giggle again as I lean my head against their chest. *Finally, I don’t have to feel awkward about it…* I end up toe-wiggling again, this time being completely aware of it.
 
-Katorin hugs Chelsea again while the kettle boils the water. Eventually, the kettle stops, and I pour the water into the now clean cup. I take the filled up over to the couch, making sure I don't trip on anything. After gently placing the cup on the table in its original spot, I grab the dustpan and broom leaning on the wall and sweep up the tissues. Eventually, I throw them into a nearby trashcan and take a sear in the armchair.
+Sam: “You know, I don’t think your toe-wiggling is compulsive.”  
+Chelsea: “… hmm? What do you mean?”  
+Sam: “You know how your family members don’t have tails?”  
+Chelsea: “Yeah, what about it?”  
+Sam: “Maybe your toe-wiggling is the equivalent of you wagging your non-existent tail.”  
+Chelsea: “How come?”  
+Sam: “Because I’ve noticed you only do it when you’re happy or feeling loved.”  
+Chelsea: “Huh…”
 
-Katorin: "Oh, thanks, [Player]. You didn't have to do that."
-Player: "The tea was cold when we walked in."
-Player: "I couldn't help but overhear as I was wandering about."
-Player: "I'm terribly sorry about what happened."
+*Is that so?* I think about all the times I’ve done it, recalling the circumstances. And it does seem to hold up…
 
-Chelsea wants to say something, but seems too anxious to do so.
+Chelsea: “Maybe you’re right. I’ve never thought about it that way.”  
+Sam: “I’m just speculating, but it’s something.”
 
-Player: "I'm sorry if I'm making you feel uncomfortable. Would you like me to head into another room?"
-Chelsea: "N-no, it's fine. I-I'm a mess."
+I giggle and keep cuddling with Sam for a while until my stomach growls.
 
-Katorin rubs Chelsea's back while Chelsea intermittently whimpers. I notice a small game console on the table next to a chess pawn, probably from the chessboard in the foyer.
+Sam: “Ooh, sounds like you haven’t eaten in a while…”  
+Chelsea: “Not since this morning.”  
+Sam: “Let’s fill that belly of yours. You want Chinese food?”  
+Chelsea: “Sure, I haven’t had it in a while.”  
+Sam: “Then it’s settled.”  
+Chelsea: “Could we get some ice cream, too? I’m kind of craving it…”  
+Sam: “Sure thing.”
 
-Chelsea: "I-I wanted to play a game on there, b-but I can't find the charger..."
+Sam strokes my hair and tries to reach for the phone, but I kick it in their direction.
 
-As Katorin tries to comfort Chelsea more, I get up and take a look at the bottom side of the console, realizing it takes the same charging cable as my phone. Fishing through my pockets, I eventually pull out my charging brick along with the cable. Eventually, I find an open outlet in the wall, plug the brick in, and plug the console into the charging cable.
+Sam: “Well, thank you, Miss Burrito.”
 
-Player: "There. That should do it for now."
-Chelsea: "T-thank you..."
-
-I make my way back to the armchair and take a seat. The two look at the table as I grab the book and inspect it. There's a bookmark lodged about halfway between the covers, just like Marty's.
-
-Chelsea: "I-I haven't finished reading it."
-Player: "Do you like murder mysteries, Chelsea?"
-Chelsea: "A-a little..."
-Player: "Hmm. I've been dating someone who was reading this just last week."
-Player: "You know Marty?"
-Chelsea: "Y-yeah... they handed me the book when they were done."
-Player: "I see. Sorry for the random question."
-
-Chelsea barely makes an attempt at a single light chuckle.
-
-Chelsea: "God, my boyfriend must be worried sick..."
-Chelsea: "I-I'm sorry for ghosting you like that, Katorin."
-Katorin: "Well, I'm glad to know a witch didn't capture you."
-
-Chelsea tries to laugh again, and it somewhat succeeds.
-
-Chelsea: "What would happen i-if I did?"
-Katorin: "Well, we'd have bigger problems."
-Katorin: "I'd have to send [Player] to find you."
-Chelsea: "That corner isn't as s-scary as it looks, Katorin."
-
-Player: "Did anyone else know about your absence?"
-Chelsea: "I-I told Ben and Jordan I wouldn't be making it this week."
-Chelsea: "I can't write songs like this..."
-Chelsea: "And I've tried to call Papa, but he hasn't been picking up..."
-Chelsea: "I probably would've fallen deeper into this hole of mine if it weren't for you two..."
-
-Chelsea hugs Katorin again, her tail slowly wagging.
-
-Chelsea: "Thank you, bestie..."
-Chelsea: "I wouldn't know what I would do without you..."
-Katorin: "Anything for my favorite pup in the world."
-
-The two keep hugging for a short while. Chelsea eventually lets go, sits up on the couch with her paws on the floor, and turns in my direction.
-
-Chelsea: "I-I'm sorry for this horrible display of a first introduction."
-Player: "No need to worry, Chelsea."
-Player: "I wanted to make sure you were alright as much as Katorin did."
-
-Chelsea grabs the tea cup from the table and sips lightly. Her eyes widen in surprise, not realizing the tea was hot.
-
-Chelsea: "Oop! I didn't realize this was hot..."
-Katorin: "[Player] made you a fresh cup two minutes ago, silly."
-Chelsea: "Oh. I'm an idiot..."
-
-Chelsea sets the cup down, holding her hand under it to catch any loose drippings of tea. She looks down at her paws in slight disappointment.
-
-Chelsea: "I want to paint my toenails again, but I rain out of nail polish..."
-Katorin: "I like the natural color."
-Katorin: "Besides, you wear sneakers almost all the time. No one's going to notice."
-Chelsea: "I guess you're right..."
-Player: "What color do you usually paint them?"
-Chelsea: "Either teal or orange. Sometimes both."
-Player: "Hmm. I can see where both of you are coming from."
-Katorin: "Uh oh, [Player] is now the arbiter of toenail polish colors."
-Player: "Ha, ha."
-
-Chelsea gets up from the couch and walks over to the outlet in the wall. She checks the console for any signs of life. With much success, the display turns on with a charging symbol.
-
-Chelsea: "Well, I guess I will have to put off my needed therapy until tonight."
-Chelsea: "Or until I can find that darned charger."
-Player: "You can borrow mine until you find yours. I have plenty of bricks and cables."
-Chelsea: "Oh, thanks, you don't have to..."
-
-Chelsea sits back down on the couch.
-
-Chelsea: "I should probably clean myself up. I've been in these clothes for days."
-Katorin: "Really? I can't even tell."
-
-Katorin smirks.
-
-Katorin: "Alright. I'll leave you to it, then."
-Katorin: "Don't hesitate to call me for anything, alright?"
-Chelsea: "Thanks, Katorin."
-Chelsea: "It was a pleasure to have you around, [Player]. I'm sorry for the trouble."
-Player: "You're good. Any friend of Katorin is a friend of mine, and I'm glad to see that you're okay."
-Chelsea: "Thanks, [Player]."
-
-Katorin and I get up and make our way to the door. Chelsea gets up from the couch and walks up the stairs. We walk outside and close the doors behind us. For the rest of the time, we casually walk down the road to Katorin's house.
-
-Katorin: "Thank goodness she's alright."
-Katorin: "I thought she died."
-Player: "That's a little extreme, don't you think?"
-Katorin: "Well, you know me, I tend to panic a lot."
-Player: "True."
-Katorin: "I can't believe her mother would go after her like that."
-Katorin: "Completely on a rampage, too. Gosh, she's such a Karen."
-Player: "I can't even begin to imagine."
-Player: "It sounds like her mother's pretty distant from the rest of the family."
-Katorin: "Chelsea's parents got divorced when she was just a toddler."
-Katorin: "And, no surprise, her mother's an absolute die-hard... c-word..."
-
-Player: "Oh, dear."
-Katorin: "So of course there's natural tension between Chelsea and her mother."
-Katorin: "No problems with the father, though. Daniel's such a blast. A real ally, too."
-Player: "That's nice."
-Katorin: "Yeah, I'm sure Chelsea could tell you all day about how grateful she is to have her father."
-Katorin: "He held her hand all the way through life, really."
-Katorin: "She picked up his hands for incredible needlework, too."
-Player: "Needlework?"
-Katorin: "Daniel's a tailor. He used to be a substitute teacher for a while, too."
-Player: "Huh. That's pretty neat."
-
-We turn the corner and keep sauntering down Narock Boulevard.
-
-Katorin: "They're just the sweetest anthros I've met in New Rollinsport."
-Katorin: "A happy anthro-coyote father with his lovely trans daughter."
-Player: "Chelsea's trans?"
-Katorin: "Yeah. She transitioned when she was in kindergarten."
-Player: "Huh. That's pretty cool; I had no idea."
-Katorin: "Well, if the trans flag pin on her jacket didn't give it away a month ago..."
-Player: "Hey, I was completely plastered thanks to someone."
-Katorin: "You're welcome."
-
-Katorin rolls her eyes and smirks.
-
-Katorin: "But yeah..."
-Player: "Well, let's hope Chelsea's mother doesn't come after her again."
-Katorin: "I hope so, too."
-Katorin: "And I'm sorry I dragged you into this instead of letting you go on your date."
-Player: "To be fair, they haven't respon-"
-
-I stop for a moment, interrupting my sentence. *They haven't responded...* Neither Chelsea nor Marty texted anyone within the past couple of days. And, given that Chelsea is transgender and what Ben told me, she answers to they/them, too. Huh... I dismiss the thought and finish the sentence.
-
-Player: "They haven't responded."
-Katorin: "That's unfortunate."
-Player: "Well, I'm sure they'll get back to me at some point."
-Player: "I guess I have to be the one to pick the places next time."
-Katorin: "Ah, I'm sure it was an honest mistake."
-Katorin: "They seem too invested into you to purposely not tell you anything."
-Player: "Yeah. I'll call them later tonight."
-Katorin: "That's a good idea."
-Player: "And don't worry about tonight, Katorin."
-Player: "As long as Chelsea's in a better state of mind, that's all that matters to me."
-Katorin: "Well, [Player], thanks for helping me."
-
-We arrive at Katorin's apartment building.
-
-Katorin: "Well... this is where I get off. See ya, [Player]."
-Player: "Alright. See you later, Katorin."
-
-Katorin walks inside the building as I turn the corner and make my way back home. The thought I had just a moment ago creeps back into my mind. Are Marty and Chelsea related? I might be pulling at straws, but things seems to be lining up too well. I dismiss the thought again, realizing that Marty's going to have to reveal themselves at some point. Let's hope Marty responds to my texts later tonight.
+I giggle again. I’m so glad that they’re here with me, and I don’t have to feel alone or awkward…
