--- a/Shounin/Story Source/ch07.md
+++ b/Shounin/Story Source/ch07.md
@@ -1,469 +1,193 @@
-A couple of weeks have passed since Marty came to my apartment, exhausted, anxious, and concerned. Thankfully, they've been in a better state of mind since then. In fact, they seem as chipper as ever. I'm not sure if it was just talking things over, the food, the naps, or a combination of those. Speaking of which, I didn't realize that Marty and I slept through the night. Both of us are convinced nothing happened, so we're in the clear.
+It’s been a few weeks since I was at Sam’s place, incredibly exhausted and concerned, still shaken up from everything that happened. I seem to be in a better state now, like myself again. Just being with Sam, someone who clearly cares for me and was available, made it better. I think I ended up sleeping on there couch by accident, but we seem to agree that nothing happened. Well, nothing beyond that first kiss… hehe.
 
-Our dates kept going regularly, most of the time in Kellihim Park. I think we also went to that Fettuccine's Burgers and Fries near Chelsea's place one night. I can't remember if that was the name of the restaurant, but at least the food was good. Oddly enough, seeing Marty eat a burger was less awkward than the pizza weeks prior.
+Thankfully, that hiccup didn’t affect our relationship or the frequency of dating. We’ve still been going strong for the past few weeks. We went to Kellhim Park again a few times, and we even went to that burger joint just around the corner from my place. I think it was Fettuccine’s or something like that. I just remember that the name was weird, but the food was so good and juicy… but, I digress.
 
-Besides our relationship growing, my theory that Chelsea and Marty being the same person kept growing, too. A lot about Marty lines up really, really well. The mannerisms, quirkiness, and even the occasional usage of 'bloody' as an expletive... If Chelsea isn't the one in that costume, then I have no idea who I'm dealing with.
+I have no idea what’s in store for tonight. It’s the day I finally cross the 4-bit limit, and I’m kinda nervous. Not because of Sam or anything, but who knows what they have up their sleeve for me. At least they’ve kept the promise of keeping my birthday on the down low…
 
-Well, I guess I'm going to find out tonight. It's both their birthdays, so I'll see how this plays out. Marty said they'd meet me up at my place, so I sit down on the armchair. I pull out a small box from my coat pocket and inspect the contents.
+I gently knock Sam’s door and wait patiently, looking down at my shoes. They’re the only thing that stick out from the rest of the outfit I have… Thankfully, I don’t have to think too much about it; I hear Sam opening the door.
 
-Thankfully, the earrings I got for them are still intact. I ordered a custom pair for them from a nearby jeweler. I felt most of the pairs were too generic or meaningless, so I figured going the custom route was better. Not only that, but I figured since they have a nerdy side to them, the Swift language mascot would be a nice touch. The orange stones shimmer in the warm lights from my ceiling. I really hope Marty likes these.
+Sam: “Hey there, birthday girl! Happy 32nd.”  
+Chelsea: “Thanks…”
 
-A soft knock on the door diverts my attention from the earrings.
+I blush and turn my head.
 
-Player: "Coming!"
+Sam: “You have a really cute outfit today. Where’d you get the dress?”  
+Chelsea: “Thanks, I made it myself!”  
+Sam: “So you make costumes and clothes? That’s impressive.”
 
-That's probably Marty at the door, likely both excited and nervous. I close the box and put it back in my coat pocket. I spring up from the armchair, walk over to the door, and open it. As I had suspected, Marty stands in front of me, fidgeting with their nails.
+I lightly giggle.
 
-Player: "Marty, hey! Happy birthday!"
+Sam: “Please, come in. I got something for you!”  
+Chelsea: “Oh?”
 
-Marty instantly stops fidgeting and hugs me.
+I follow Sam’s gesture and step inside, taking off my shoes by the front door. I walk over to the couch where Sam stands and take a seat.
 
-Marty: "Aww, thanks..."
-Marty: "I'm old now, and I don't know how I feel about that."
-Player: "You don't seem any older than you were a week ago."
-Marty: "Maybe I should be waiting until I get the gray hairs to know."
+Sam: “Aww, you have matching socks for your top! That’s adorable.”
 
-Marty and I let go so that they can step inside. As they step inside, I close the door behind them.
+I blush.
 
-Player: "When are we planning to leave?"
-Marty: "About a half-hour."
-Marty: "Though I could technically do any time, [Player]."
+Chelsea: “Hehe, I got them when I wanted to make a birthday cake costume. I never got around to that.”  
+Chelsea: “So I just wear them on special days like this…”
 
-Marty leans their elbow against the counter and starts fidgeting with their nails again.
+I notice the boxes on the coffee table for a brief second, though I quickly redirect my attention to Sam.
 
-Player: "You, uh, look... hammer-y..."
+Sam: “Birthday cake costume? I wonder how that would’ve looked, knowing you…”  
+Chelsea: “Well, maybe I can get a prototype for you someday.”  
+Sam: “I’m sure it’d be fun to explore. Here…”
 
-Marty lightly chuckles.
+Sam grabs one of the boxes and hands it to me. It feels a bit heavier than I expected. Coincidentally, the wrapping paper has the same design as both my dress and socks.
 
-Marty: "Is the best you got, [Player]?"
-Player: "I can't really say much about how you look with that costume of yours on."
-Marty: "True. It'll be off by the time we leave."
+Chelsea: “How did you manage to get identical wrapping paper?”  
+Sam: “You know, I have no idea. Pure coincidence.”  
+Sam: “If I’ve learned anything from you, what’s inside is much more valuable, though…”
 
-An awkward silence between us grows and lingers.
+I smirk at them as I rip off the wrapping paper, revealing a boxed… Lotus Pad?
 
-Marty: "Oh, bloody hell!"
-Marty: "I can't do this. The anxiety's getting to me..."
+Chelsea: “No way… you serious?”  
+Sam: “I know your computer’s on its last legs, so I wanted to get something that’s as flexible as you are.”  
+Sam: “Now, time for this next box.”  
+Chelsea: “Next box?”
 
-Defying my expectations, Marty grabs the sides of their helmet and begins tugging. They keep trying to pull the helmet up, but slip and fail with each attempt.
+*Just how much did they spend on me? Jeez…* Sam hands me a much smaller and more rectangular box. I carefully rip off the wrapping paper again, just a little hesitant to see what’s inside.Quickly, I discover that I’m holding the stylus for the tablet. I’m so overwhelmed, I’m at a loss for words; instead, I let out a little puppy yelp.
 
-Marty: "Gah! My hands are too unsteady."
-Player: "Are you alright?"
+Sam: “After seeing your handwritten lyrics all across the coffee table at your house, I figured getting the stylus will do wonders for you.”  
+Sam: “That way, you can write the way you always have and have a digital copy, freeing up some space.”  
+Chelsea: “Aww…”  
+Sam: “There’s more.”
 
-Marty sulks.
+*More?* I know programmers at ArcAI make a lot of money, but, *damn…* Sam hands me a thinner box about the same dimensions of the table itself. I start ripping open this present, too.
 
-Marty: "I... I wanted to avoid making this any more awkward."
-Marty: "I wanted to be all cinematic about taking this helmet off."
-Marty: "But my anxiety is kicking in..."
-Marty: "And now I can't get it off. My hands are too unsteady."
-Marty: "I just wanted to not get embarrassed about doing this just one, *one* time..."
+Chelsea: “How much did you spend on all of this, Sam?”  
+Sam: “Not to worry: I ended up getting a really good deal.”
 
-I walk towards Marty, take the box from my coat pocket, and set it on the countertop.
+After setting the wrapping paper aside, I see the box in my hands: the official keyboard case for the tablet.
 
-Player: "Would you like me to take this helmet off you?"
-Marty: "Oh, please do! The anxiety is killing me..."
+Sam: “So you can use it like your old computer, if you want. I think the white one looks better than the other color they had for your particular color.”  
+Chelsea: “You really thought of everything for this, didn’t you?”  
+Sam: “Of course. I wanted to make sure you got the best.”
 
-I grab the sides of the helmet and carefully pull it up and around their head. Within a few seconds, I pull the helmet off and set it on a nearby stool. And, thankfully, my suspicions were correct; I see Chelsea's face, frozen in fear and anxiety. Besides the sweat dripping from her forehead, she looks nearly immaculate with a lavish hairdo, orange eyeliner, and ruby red lipstick on her lips.
+Sam boops my muzzle. I lightly giggle.
 
-Player: "Well, it's good to finally see that helmet off of you, Chelsea."
+Chelsea: “Thank you, this really means a lot…”  
+Sam: “There’s just one more thing, though.”
 
-Chelsea remains speechless for a few more seconds before snapping out of her trance.
+Sam pulls out a large box from behind their back, wrapped in a different shiny wrapping paper.
 
-Chelsea: "I... did you..."
-Player: "I had a suspicion for the past couple of weeks, but not really."
+Sam: “This just came in today and I wrapped it an hour ago. It took a while to get here.”
 
-Chelsea's cheeks turn red in embarrassment.
+I quizzically look at them as I start unwrapping the box. I notice the brown cardboard box as soon as I pull off the wrapping paper. *What is this; what could have they possibly gotten me that took this long to get to here?* I carefully start to open the lid of the box.
 
-Chelsea: "I screwed this up."
-Chelsea: "I wanted this to be a big surprise."
-Chelsea: "I had a whole spiel planned before you took off my helmet, but..."
-Chelsea: "I really should just stick to writing songs."
+Sam: “It’s adorable watching you open this. It’s like watching a puppy play around with a shiny new toy in which they have no idea how it works.”
 
-Chelsea stands back up, learns her head on my shoulder, and hugs me.
+I smirk as I lift the tissue paper underneath the lid of the box. And that’s when I noticed a pair of grey sneakers in the box.
 
-Chelsea: "I'm such a noob at all of this."
-Chelsea: "Anyone that I'd talk to and ask out on a date would just scoff in my face."
-Chelsea: "'Me? Date a *coyote*? Never!'"
-Chelsea: "'Oh, there's no way I could date you if you're gonna wear that trans flag on your jacket!'"
-Chelsea: "'Anthro-coyote and trans? That's quite the bloody package!'"
-Player: "... people have said that to you? That's awful."
-Player: "I'm sorry you've had a rough time."
+Chelsea: “Oh, my God…”  
+Sam: “I felt kinda bad that you couldn’t find a good pair of shoes with a neutral color. So, I did some asking around and got ahold of this brand.”  
+Sam: “They’ve made custom versions of this pair of sneakers for anthros before, and I  was able to get a custom size made for you.”  
+Chelsea: “Aww, I can’t believe you did this…”
 
-Chelsea sighs.
+I start tearing up and try to hold back. I can’t believe they’d go through all that hard work just for me. Sam leans in for a hug just before I start to lose control of my tears.
 
-Chelsea: "Relationships are hard."
-Player: "No one said it was easy. But we'll get through it together."
+Sam: “Happy birthday, pupper.”  
+Chelsea: “Thank you…”
 
-I feel her tail wagging slowly as she sighs in relief.
+We keep hugging for a long while, and it’s felt like the best hug I’ve ever had. I haven’t felt this way since I was a little pup just before I was going to transition.
 
-Chelsea: "[Player], would you have still gone out on dates with me if I didn't do this whole charade?"
-Player: "Yeah, if you were up for it."
-Chelsea: "... R-Really? You would?"
-Player: "Sure."
+In a moment’s notice, we gracefully break from the hug. By now the tears have stopped, though I still sniffle occasionally. I look down at the sneakers, still pristine in their box.
 
-Chelsea takes her head off my shoulder and looks me directly in the eye.
+Chelsea: “You cool with me trying these on?”  
+Sam: “Of course! I’m hoping they fit just right.”
 
-Chelsea: "I almost don't believe you."
+I take the sneakers out of the box, remove the paper from inside them, and put them on. As soon as my paws)touch the ground, I and unexpectedly nice cushion. I pace around the room, occasionally looking at my kicks.
 
-Chelsea: "What makes you say that?"
+Chelsea: “Oh, this feels so *comfortable*! It feels like I’m walking on clouds.”  
+Sam: “They look great on you.”
 
-- "You're attractive."
-    - Chelsea: "I..."
-    - Chelsea looks away, blushing.
-    - Chelsea: "No one has ever said that to me."
-- "I like your personality."
-    - Chelsea: "You figured that out just from the concert?"
-    - Chelsea: "Half of the time, I'm just acting..."
-    - Player: "Whatever you did onstage a month ago felt genuine."
-    - Chelsea looks off to the side, blushing.
-    - Chelsea: "I guess. I didn't know you'd show up, though..."
-- "Katorin would've probably pushed me towards you."
-    - Chelsea giggles sheepishly.
-    - Chelsea: "She probably would've pushed me towards you."
-    - Chelsea: "I'll never understand what goes through her head..."
+I end up wiggling my toes in delight, unaware of the sneakers following my movement. I squeal lightly like it’s the best thing since sliced bread. My teal shoes feel like clunkers in comparison to this…
 
-Chelsea notices the box on the table and picks it up.
+Sam: “I’m sure you didn’t want your tail-wagging alternative to feel that hidden away, so I made sure to find you a pair where you’d feel happy to, uh, show off down there.”
 
-Chelsea: "What's this?"
-Player: "Why don't you open it and find out?"
+I giggle lightly. They know me too well, even if there exists people who take a little too much interest in that. I come over to them and gently sit on their lap like a child going to visit Santa Claus.
 
-Chelsea gently lifts the lid, sets it aside, and is immediately drawn to the earrings. She gasps lightly and pulls out one of the earrings.
+Sam: “How do you feel?”  
+Chelsea: “Like the prettiest pupper in the world.”
 
-Chelsea: "Awe, they're cute little Swift birdies!"
+I lean in for a short kiss, and Sam smooches me on the top of my muzzle. After looking into their eyes for long enough, I realize the one thing I wanted to show them: the new burrito costume I made for my photo shoot this morning.
 
-She sets the box down on the counter and hugs me again, this time a little tighter.
+Chelsea: “Do you have any other surprises up your sleeve?”  
+Sam: “Well, I was going to serve dinner, but if you had something in mind…”  
+Chelsea: “Yeah, there’s a new costume I wanted to show you.”  
+Sam: “New costume?”  
+Chelsea: “For my photo shoot for my new album this morning.”  
+Sam: “Oh! Okay, sure. However you want to do it.”  
+Chelsea: “Just give me a few minutes, and I’ll let you know when I’m ready.”
 
-Chelsea: "Thank you..."
-Player: "You're welcome."
-Player: "I think they will go well with your eyeliner."
-Chelsea: "Yeah, they would..."
+I walk over to the bedroom and close the door. I take off my new sneakers and set them aside the dresser. Being as quiet and speedy as I can, I switch into the new burrito costume I made, sealing up all the velcro spots and making sure the fake foil stuck. Gently, I lay myself on the bed and call out to Sam. In moments, they come in and sit on the side of the bed.
 
-Chelsea lets go of me and rushes to take off t the rest of her costume, revealing a sparkling teal dress underneath. She eagerly grabs the earrings, and, gently and carefully, she puts them on. She looks at me and grins.
+Sam: “Huh, the foil’s new.”  
+Chelsea: “That’s not the only new thing, you know.”  
+Chelsea: “You wanna bite? I’ll let you pick which side…”  
+Sam: “Well, aren’t you getting a little spicy… how about this one?”
 
-Chelsea: "Man, it's been so long since I have worn earrings."
-Chelsea: "I think I'll be wearing these a lot."
+Sam peels off the fake foil and inadvertently grabs my legs. I stifle a giggle well enough for them not to notice.
 
-The earrings sparkle and make her eyeliner pop. She wears a big grin, as excited as a young puppy would be. This has been the happiest I've seen Chelsea since I've met her.
+Sam: “So, what’s new about this version, pupper?”
 
-Player: "You look absolutely stunning."
+I go with the flow and kick the bottom velcro open. Sam gasps, realizing their mistake whilst looking at the now open side.
 
-Chelsea giggles lightly as her eyes glisten under the warm ceiling lights.
+Sam: “Oh, how did I do that?”  
+Chelsea: “Heey, that’s the side *you* chose…”. 
+Sam: “Gee, how was I gonna know? Both sides look the same.”
 
-Player: "When are supposed to leave again?"
-Chelsea: "Well, I thought this was going to take a long time, but I'm ready when you are."
-Player: "Alright, then. I don't want to hold everyone else up..."
+I cackle and reorient myself, leaning against them and pushing my paws through the holes in the bottom.
 
-Chelsea grabs the purse she set aside on the counter and holds my hand.
+Sam: “So you only changed the bottom?”  
+Chelsea: “Of course not!”
 
-Chelsea: "Lead the way, my love."
-Player: "Alright, Your Highness."
+I undo the velcro on my sides and push my arms through the newly created holes.
 
-Chelsea cackles as we walk out the door.
+Sam: “Oh, you have arms! Weird!”  
+Chelsea: “The whole front half comes off, too.”  
+Chelsea: “We agreed on a shot where I pull the front off, but they froze the frame, I think.”  
+Sam: “Well, now I wonder who’d buy an album with a burrito like that on it…”  
+Chelsea: “People who eat dogs, apparently.”
 
-Chelsea: "I know my dad's British and all, but..."
-Player: "... your father's British?"
-Chelsea: "Yup. Grew up in Bath. Somehow picked up his swear word."
-Player: "Huh. Today I learned..."
+Sam and I cackle for a while before they pull me closer, pulling off just enough the front to reveal my head.
+
+Sam: “Hi there.”  
+Chelsea: “Hey.”
+
+Naturally, we end up making out a little. I couldn’t feel any happier. We stop after a few minutes, and Sam strokes my hair.
+
+Sam: “So, what’s next, Miss Burrito?”  
+Chelsea: “Maybe going for a bite and some puzzles.”  
+Sam: “Sure, whatever you’d like.”
 
 ---
 
-We make our way to Antony's Tavern, like I did when I first met her. The bar seems half-full tonight, with a couple of tables filled. Katorin spots us from across the bar and flails her arms to get our attention. I hear Chelsea sigh and see her pinch her muzzle in disapproval. Ben and Jordan cover their eyes in agreement.
+We spend the next hour or so eating a split pea soup Sam made for me, setting up my new tablet, and playing a puzzle game I’ve wanted to play for a while. They somehow managed to get my father’s recipe and nail it. That’s dedication.
 
-Player: "Yup. That's Katorin all right."
+Sam strokes my hair as I lay on top of them on the couch, waltzing through the world in search of more puzzles.
 
-Chelsea snickers. We walk over to the table, and Katorin stands up.
+Sam: “You still looking for a place on this side of town?”  
+Chelsea: “I want to, but I haven’t really looked since… *the event*.”  
+Sam: “… you wanna move in with me?”  
+Chelsea: “… move… in?”
 
-Katorin: "Chelsea!"
+*Are they really offering to let me stay with them? Oh, my God…*
 
-Katorin rushes towards Chelsea and hugs her.
+Sam: “Yeah. I mean, we’ve been partners for a while now.”  
+Sam: “At the very least, I’d trust you as a good housemate.”
 
-Katorin: "Happy birthday, bestie!"
-Katorin: "Thirty-two..."
-Chelsea: "I know, I know..."
-Chelsea: "Thirty-two bits of this graciousness!"
+*This… this is really happening…*
 
-Katorin's sheepishly laughs while the rest of the tables joins enthusiastically, myself included.
+Chelsea: “You’d do that for me?”  
+Sam: “I’m not dating anyone else…”
 
-Katorin: "I don't know how all of you put up with these kinds of jokes."
-Ben: "Well, it takes a nerd to know one."
-Katorin: "Gee, thanks."
+I set the tablet on the table, flip around, and hug them while I let out a little puppy squeal.
 
-Katorin takes a seat shortly after, Chelsea and I find two chairs to sit in.
+Sam: “I’ll take that as a yes. I can help you pack later.”  
+Chelsea: “Thank you…”  
+Sam: “Only for my favorite pupper.”
 
-Jordan: "So... Chelsea and [Player], eh?"
-Jordan: That's one cocktail I didn't imagine."
-Ben: "Go easy on the birthday girl, Jordan. I think she has fine taste."
-
-The two laugh.
-
-Ben: "Let's get these two a nice surprise."
-Chelsea: "I hope it's not that knockout juice Katorin craves."
-
-Katorin looks in astonishment as Ben snickers.
-
-Ben: "Na, even I wouldn't touch that."
-Katorin: "It was just *one* time I got [Player] that drink..."
-Jordan: "That we know of."
-
-Katorin sighs in embarrassment as Ben leaves the table.
-
-Jordan: "Well, it's good to see that you and the birthday girl here got together."
-Jordan: "She wouldn't stop talking about you, almost every jam session we've had!"
-Jordan: "You two would make a great couple, anyway."
-Katorin: "Who, him and Chelsea or him and the hammer?"
-
-Jordan glares at Katorin.
-
-Katorin: "Wait, are they...?"
-
-Chelsea, Jordan, and I cackle in response.
-
-Katorin: "Oh, I see, you all have been scheming..."
-Jordan: "We all knew this. Well, maybe not [Player]."
-Player: "I had a funny feeling since a couple of weeks ago."
-Jordan: "Oh. Well, in that case..."
-Katorin: "Well, goodness me; you make for one sexy hammer, Chelsea."
-
-Chelsea blushes, but as soon as Ben returns with the drinks, she takes one of the glasses, takes a sip, and slams down the glass.
-
-Chelsea: "You know what? Of course, I do!"
-Chelsea: "You'll never meet another hammer as sexy as I am!"
-
-Ben laughs hysterically while Jordan claps.
-
-Jordan: "Yeah, own it, Chels!"
-
-Katorin sulks in embarrassment and shame, realizing what she had done.
-
-Katorin: "Look at what I've started..."
-Ben: "Aren't you glad to be friends with us?"
-
-Katorin feigns a smile with short, quiet laughter before sipping her glass. Jordan lightly taps her shoulder.
-
-Jordan: "Well, better late than never."
-Chelsea: "ThEre's a chANge In the weATHEr..."
-
-Chelsea "sings" her response, emulating a voice crack every few seconds. She smiles as Jordan chuckles, and Ben stifles his.
-
-Jordan: "There's no way you're already this tipsy."
-Chelsea: "What? No, I'm just being obnoxious."
-Ben: "This is gonna be a fun night..."
-Ben: "Well, [Player], I'm sorry in advance if she's too much to deal with tonight when you take her home or wherever."
-Jordan: "She's not that bad, Ben. Maybe tipsy, but not horrible."
-Ben: "Don't listen to him. He's had three drinks already."
-
-Chelsea giggles and hold my hand again.
-
-Chelsea: "These are my friends, [Player]."
-Player: "Yup..."
-
-Chelsea takes another sip from her glass.
-
-Jordan: "So, thirty-two..."
-Chelsea: "Yeah, I know..."
-Chelsea: "I don't even feel that old. I still feel like I'm twenty-one."
-Ben: "I don't think you're going to feel old until you throw your back out."
-Chelsea: "Really? With how I pick up my guitar?"
-Ben: "It'll happen someday."
-Chelsea: "Probably. I'm not that scrupulous..."
-Katorin: "I don't know about that."
-Katorin: "You seemed to have the whole date thing planned down to the very last detail."
-
-Chelsea and I look at each other and laugh.
-
-Katorin: "What?"
-Chelsea: "Lucky you weren't there half an hour ago."
-Chelsea: "I nearly had a breakdown before [Player] jumped in and ripped my helmet off!"
-Player: "I didn't rip it off, per se..."
-Chelsea: "You did for the sake of the argument."
-Player: "Okay."
-Katorin: "Oh. I thought you were going to plan this out like some shoddy romantic comedy."
-Chelsea: "A romantic comedy? Really, Katorin?"
-Chelsea: "Cinematic? Sure, I wanted some action."
-Chelsea: "But I'd never do romantic comedies. That's way too cheesy for my liking."
-Katorin: "Says the girl that watches documentaries on the internet like there's no tomorrow."
-Chelsea: "I'll drink to that."
-
-Chelsea takes another sip, taking nearly half of the glass. She takes a look at mine, which remains completely full.
-
-Chelsea: "You're not much of a drinker, are you?"
-Player: "Not really."
-Chelsea: "Huh. Well, the good news is that you don't have the knockout juice."
-
-Chelsea smirks at Katorin.
-
-Katorin: "Again with the knockout juice? Is this the new running joke?"
-Chelsea: "Welcome to the marathon."
-Ben: "You're planning to run in flats, Chels?"
-Chelsea: "Are you kidding? This is the pre-marathon dinner!"
-
-Everyone at the table laughs.
-
-Jordan: "Well, that's good. I don't know how well that would end for you."
-Chelsea: "I'm pretty fast, Jordan."
-Ben: "Sorry, Jordan; she's right. She's pretty light on her paws."
-Chelsea: "You remember when I was running late and nearly missed the bus?"
-Ben: "Ha ha! Yeah, I remember that."
-Ben: "You practically flew across the street! I'm surprised you didn't hit anyone with your guitar on the way over."
-Chelsea: "I have a way of maneuvering things..."
-Ben: "I think the only creature I've met that could outrun you would be, well..."
-Chelsea: "Oh, yeah. Poor girl."
-Chelsea: "She was the only wolf I met that didn't have their head shoved up their tail."
-Player: "Forgive me, but who are you all talking about?"
-Ben: "Eh, long story..."
-
-Chelsea puts her hand on my shoulder.
-
-Chelsea: "Don't worry too much about it. I'll tell you about that one later."
-Player: "Right. Got it."
-
-Ben raises his glass.
-
-Ben: "A toast for Chelsea, and another in memory of Rosetta."
-
-Everyone clinks their glass and takes two sips. Thankfully, my drink isn't too strong. Katorin notices Chelsea's earrings.
-
-Katorin: "Are those new earrings? I haven't seen you wear them before..."
-Chelsea: "Oh, yeah! [Player] got them for me..."
-Ben: "They really bring out your eye color more."
-Ben: "Nice work, [Player]."
-Player: "Thanks."
-
----
-
-We keep talking and drinking our glass for a couple of hours as the night drags on. Eventually, everyone else says their goodbyes, hugging Chelsea in the process. We're the last ones to leave the table as we make our way down Bouchard Street to my apartment. It's a clear night, with the stars visibly shining and glimmering alongside the full moon.
-
-Chelsea: "I could pluck that moon and put it somewhere else if I wanted..."
-Player: "Where would you put it, exactly?"
-Chelsea: "I don't know. But it'd be fun to do it anyway."
-Player: "Well, as long as you aren't stealing it, we're fine."
-Chelsea: "I bet someone put a piece of cheese up there."
-
-I laugh.
-
-Player: "Alright, then. You show me."
-Chelsea: "Sure, once we're inside."
-Chelsea: "I'm still able to operate one of these!"
-
-She pulls out the game console I saw weeks ago from her purse.
-
-Player: "You just carry that around with you?"
-Chelsea: "No. Just tonight."
-Player: "Oh, alright, then."
-Chelsea: "Don't worry. I know I took a whole glass, but I can still manage."
-Chelsea: "It's odd to me that it takes me nearly four of those before I get drunk."
-Player: "Yeah. You're also not allergic to chocolate, either."
-Chelsea: "Well, I am. But it's not lethally allergic."
-Chelsea: "As long I don't have it in large quantities in rapid succession, I'm fine."
-
-We turn the corner and saunter our way down Sun Valley Road.
-
-Chelsea: "Someday I'll get to move down here instead of the other side of town."
-Chelsea: "It's still boring up where I am."
-Chelsea: "The neighbors across the street seem to stare at me a lot, too."
-Chelsea: "Must've been from when... *she*... visited."
-Player: "I'm sure we'll find a place over here."
-Player: "And you're more than welcome to stay at my place if your neighbors are creeping you out too much."
-Chelsea: "Thanks."
-
-Chelsea looks off to the side at the waves.
-
-Chelsea: "Those waves look pretty under the moonlight."
-Player: "Yeah. They do."
-Player: "You want to hop down there and take a swim?"
-
-Chelsea snickers.
-
-Chelsea: "I didn't bring a swimsuit with me, you know."
-Player: "I'm only teasing."
-Chelsea: "I could go for some tea, though."
-Chelsea: "Do I still...?"
-
-Chelsea sifts through her purse and pulls out a couple of packets.
-
-Chelsea: "Oh, perfect! This cinnamon and nutmeg will do."
-Player: "Sure, I'll boil some water when we get back."
-
-We make our way to my apartment in about five minutes. I guess Chelsea's heart was set on the tea, so we picked up the pace. After we get through the door and turn on the lights, I start filling up the kettle with water.
-
-Chelsea: "[Player], where's the restroom in your place?"
-Player: "On your right."
-
-She pokes her head around the corner.
-
-Chelsea: "Oh, thanks. I'm just gonna do my business and probably change out of this."
-
-Chelsea grabs her purse and walks into the restroom while I put the kettle on the plate to start boiling. I pull down two mugs and set them aside while I wait for Chelsea to get back. Eventually, she returns from the bathroom with an entirely different outfit. I hear the kettle pop as it finishes boiling.
-
-Player: "Just in time. The water just finished."
-Chelsea: "Oh, good!"
-
-I grab one of the mugs and put it in front of her as she sifts through her purse to find the packets again. She eventually finds the packets and rips it with her teeth while I bring the kettle over and pour water into her mug.
-
-Chelsea: "Oh, thank you!"
-
-I grab my cup, pour the water, and fish for a tea bag in my cabinets. As soon as I find the tea bag I want and come back to the counter to put it in, I discover that Chelsea has moved over to the couch.
-
-Player: "I didn't realize you moved over there."
-Chelsea: "It's more comfortable than the stool."
-Player: "Alright."
-
-I drop the tea bag into the mug and walk over to the couch. As I sit down, I notice that Chelsea has herself wrapped in a burrito-looking cocoon while sipping on her tea.
-
-Player: "... you had this on you, too?"
-Chelsea: "Does this surprise you?"
-Player: "Yeah, kind of."
-Chelsea: "I've found this to be a lot comfier than using blankets."
-Chelsea: "Fits real nice into the purse and contains my shedding, too."
-
-She sets her tea cup down on the table and pulls up on her costume until her arms and shoulders are encapsulated.
-
-Chelsea: "I sometimes fall asleep on my couch like this."
-Player: "... you do realize that there are people that eat dogs, right?"
-Chelsea: "Sure I do. That doesn't stop me."
-Chelsea: "And besides..."
-
-She scoots closer to me and leans her head against my shoulder.
-
-Chelsea: "Who wouldn't want to cuddle with a burrito?"
-Player: "I mean, I don't mind cuddling with you..."
-
-I lightly tap her nose. Chelsea giggles lightly as she scoots a bit closer.
-
-Chelsea: "You're lucky we're dating, because I don't let anyone boop my snoot."
-Chelsea: "Well, maybe except Papa and really close friends."
-Player: "I guess I am lucky, then."
-
-I hear her tail wag and rub against the couch while she rubs her head against my shoulder. I wrap my arm around her and pull her closer toward me.
-
-Chelsea: "I love you, [Player]."
-Player: "I love you, too."
-
-I lightly kiss the top of her muzzle, not prepared to get a little fur in my mouth.
-
-Player: "Yeah, right, fur..."
-
-Chelsea lightly giggles.
-
-Chelsea: "You know you're supposed to do it on the lips where there's less fur, right?"
-Player: "Yup, I knew that..."
-
-Chelsea props herself up, turns around, and sits on her paws.
-
-Chelsea: "Something like this..."
-
-She leans in, and in an instant, we kiss each other, albeit awkwardly. We hold it for at least a minute or two before Chelsea slowly pulls back.
-
-Chelsea: "I'm gonna be honest, I've never kissed anyone before."
-Player: "Neither have I, let alone a coyote."
-Chelsea: "Was it weird? Like, I don't know if I..."
-
-I pull Chelsea closer towards me.
-
-Player: "It's as awkward as this whole things has been. But I love it."
-
-Chelsea giggles, and we kiss again for a brief moment before she turns around again and leans on my shoulder like before.
-
-Chelsea: "Could you hand me my tea?"
-Player: "Sure."
-
-It feels nice to finally be moving forward with Chelsea, no matter how awkward or burrito-like she is. It almost feels like she's indexed my heart, and I, hers. We're not a normal couple, but I can live with that. Besides, it makes the adventure more fun.
+Sam says that last part while booping me. This has been the best birthday of my life; I doubt there will be anything that tops this in a long, long while…
