--- a/Shounin/Story Source/ch01.md
+++ b/Shounin/Story Source/ch01.md
@@ -1,308 +1,311 @@
-This was it: the moment we had been waiting for. For the past few years, my team and I at ArcAI had been building Project Snowflake. Yes, *the* ArcAI from New Rollinsport that builds business solutions with machine learning. The kind of machine learning to classify buildings with as little data as possible.
+Tonight can’t be more perfect; it’s a Friday night, *Antony’s Tavern* seems pretty full, and I’m about to perform again. I used to perform here while I started working on my first album, though I don’t do it as much now. It’s good to get back in the groove, especially after the tavern being closed for as long as it did.
 
-The release couldn't have been sooner; we had been waiting for such a long time. And here we are, finally releasing it to the entire world. No hitches, no calls for hotfixes; it couldn't have been better. The entire engineering department joins us in celebration. Everyone's hugging each other, screaming, crying in pure joy... The long journey to bring us here is finally over.
+It’s a special night, too. My best friend, Katorin, promised to introduce me to her colleague. They finished some big project this morning and want to celebrate. She never really talks to me about her job, though I bet it’s some programming deal. I’m excited to finally meet someone she works with!
 
-The woman next to me raises her coffee mug before taking a sip. That woman is Katorin, the engineer responsible for the heavy lifting of Project Snowflake. She made the machine learning models and all the inner bits that made the app function. The former Catalina City resident couldn't be ever more gracious, especially today. Behind those blue-light filter glasses is one of the most energetic and passionate personalities I have ever met.
+The opening band finishes their last number, waves goodbye, and walks down the steps. I didn’t really listen in, as I spaced out a little. One of the members approaches me.
 
-Katorin: "Hey, uh, [Player], you're 'drifting' again..."
-Player: "Am I? My bad."
-Katorin: "Well, lads, we've finally done it. Snowflake has sailed."
-Player: "Yeah, thanks to you and everyone else here!"
-Katorin: "And thankfully it hasn't gone down in flames yet."
-Katorin: "I think that's a first for this company."
-Player: "Maybe the second."
-Katorin: "Really?"
-Player: "I think so."
-Katorin: "Ah, well, it's rare enough to be noteworthy. To the team!"
+Band Member: “I’m surprised you weren’t over by that mirror.”  
+Chelsea: “Should I have been?”  
+Band Member: “Most of them do. You seem the confident type, though.”  
+Chelsea: “Uhh, thanks?”
 
-She raises her mug again to toast, and we soon follow.
+They pat my shoulder and walk off, regrouping with their band mates. I don’t understand people, sometimes.
 
-Player: "So what happens now?"
-Katorin: "Project wise? No idea."
-Katorin: "Later tonight, however..."
-Player: "Ah, that's right, you're gonna take me to that bar."
-Katorin: "You know it!"
-Player: "I don't suppose John is joining us?"
-Katorin: "Ah, unfortunately not; John has some personal matters to tend to."
-Player: "What a shame, but understandable."
-Player: "Remind me again what makes this bar special."
-Katorin: "You'll see."
-Player: "... right, okay."
+"Everybody Wants to Rule the World" plays on a loudspeaker. The whine from the loudspeaker seems a bit more amplified, despite it being usually unnoticeable. I just hope it doesn’t give me a headache.
+
+I peek over to the side and look through the crowd. Instantly, I spot Katorin with her supposed colleague at a table towards the back. Her sparkling violet and pink hair, along with her energetic and passionate personality, are pretty hard to miss. The former Catalina City resident seems deep in conversation with her colleague. At least she kept her promise!
+
+It isn’t long before I’m given the OK to get up on stage. This shouldn’t be too bad, I’ve done this before. Before I get up on stage, I feel a tap on my shoulder. I turn around and see Ben and Jordan, two friends of mine.
+
+Chelsea: “Oh, hey! I haven’t seen you in a while.”  
+Jordan: “You surprised us when I heard that you were performing tonight.”  
+Ben: “Figured we could help you with the instruments.”  
+Chelsea: “Aww, thanks…”
+
+I hug the two of them. Ben grunts a little.
+
+Jordan: “You ready?”  
+Chelsea: “Of course I am!”
+
+We get up on stage and start setting up for the performance. I try to not think a lot about the fact Katorin’s sitting right there, and it seems to be pretty effective.
+
+Once Jordan and Ben are set up and ready to go, I tap on the microphone, just to be sure it’s on.
+
+Chelsea: “Hellooooo, everyone!”
+
+The whole tavern goes wild, and Katorin cheers loudly. Her colleague sheephisly joins in.
+
+Chelsea: “Wow, it’s… been a while since I’ve been up here.”
+
+I nervously chuckle out of habit. Katorin leans in closer to her colleague to say something.
+
+Chelsea: “Well, uh, I don’t really have a fancy intro prepared or anything. Who’s ready for some music?”
+
+The crowd cheers.
+
+Chelsea: “I’ll take that as a yes! Let’s get started, then!”
+
+And, in an instant, I’ve jumped into my first number. A lot of people like my style of music, which was inspired by 80’s and new age music. Katorin’s jamming out in the corner of my eye, more than the rest of the crowd. She’s always so energetic; I’d chuckle if I could.
+
+The night’s going so well. Everyone’s liking my live performance; or I’d like to think so, anyway. Maybe they’re all slammed from the drinks.
+
+I look over to Katorin and wave slightly. her colleague must have noticed, because they’re looking at me, too.
+
+*Oh, God… they’re looking at me…*
+
+*and they’re just… so… cute!*
+
+I barely keep my composure and keep signing. I hope they didn’t notice… God, I wish Katorin had said something before. No matter: I can’t be dwelling on this for long. I keep going with the performance and just shrug it off. I can just talk to her later.
 
 ---
 
-> Context: This part takes place hours after the first scene, following a fade to black.
-> 
+I’m surprised I managed to keep my cool through the rest of the performance. Of course, everyone loved it, and I don’t think anyone noticed.
 
-The bar seems packed tonight. I'm not sure if that's because I'm seeing a lot of my colleagues here or because of the upcoming performance. Then again, I've never really been a drinker, and I've never been here before. I take a sip from my glass.
+The closing band comes up and prepares their set as we come off stage. Jordan jabs his elbow into my side lightly by the time we get to the little backstage area.
 
-Katorin: "Not much of a drinker, are ya?"
-Player: "Not really."
+Jordan: “You knocked it out the park again, Chelsea! You still got it.”  
+Chelsea: “Oh, thanks! I wasn’t sure if I was that rusty with a live performance, or…”  
+Ben: “Rusty? Nah. Everyone loved it.”
+
+I hope I can get to Katorin before they leave.
+
+Chelsea: “I’d love to chit-chat and all, but I gotta find Katorin and talk to her.”  
+Ben: “She upset ya or something?”  
+Chelsea: “What? No, it’s not like that, it’s something else.”  
+Jordan: “We’ll still be here, then. But hey…”
+
+Jordan reaches for a quick hug.
+
+Jordan: “It was good performing with you again tonight.”  
+Jordan: “Now, go find her!”  
+Chelsea: “Thanks, Jordan and Ben. I’ll talk to you both later.”
+
+I scurry off to the side and slip into the crowd, looking for Katorin. Thankfully, I see her over by the bar and slip in. This is going to be an awkward conversation, I feel it…
+
+Chelsea: “Heey, bestie!”  
+Katorin: “Chelsea! Hi!”
+
+Katorin hugs me for a brief moment.
+
+Katorin: “You were awesome up there tonight!”  
+Chelsea: “Aww, thanks. Say, can I talk to you in private? Just really quick?”  
+Katorin: “Oh, sure!”
+
+She gets the bartender’s attention and points to the door. She nods while Katorin grabs my hand and walks out the front door, pulling me to the side.
+
+Katorin: “What’s up? Did something happen?”
+
+*Well, here goes…*
+
+Chelsea: “You didn’t tell me your colleague was gonna be cute!”
+
+Katorin: “… wh-what?”
+
+Chelsea: “I noticed them looking at me during ‘Under the Sun’ and I couldn’t help but notice…”
 
 Katorin chuckles.
 
-Katorin: "I could tell. Here, I'm gonna get you something better than whatever the hell this is."
+Katorin: “That’s what you brought me out here for? You’re a funny pupper, Chelsea.”  
+Chelsea: “What? I kinda like them…”
 
-She takes my glass and walks up to the bartender. I slouch in my chair a little as I watch the opening band. They aren't particularly notable; in fact, I'm sure they may have had only a couple of gigs. They sound a bit dry for me. Thankfully, I don't have to focus on them much longer... Katorin comes back with a new glass in her hand.
+I start picking at my fingernails.
 
-Katorin: "As long as you don't down this in one go, you should be fine."
-Katorin: "Given your... pace... for drinking, this should give you a good buzz."
-Player: "Thanks."
-Katorin: "I guess the opening band here didn't get off to a good start."
-Player: "Well, they do sound a little dry..."
-Katorin: "Can't really expect much now, can ya?"
-Player: "I suppose."
-Katorin: "Well, the next guys are definitely gonna set the bar pretty high."
-Player: "Are there two opening bands?"
-Katorin: "*stifles laugh* No, of course not."
-Player: "Ah."
+Katorin: “Well, this is an interesting turn of events.”  
+Katorin: “I guess this will make my job of introducing-”  
+Chelsea: “Do they have a partner?”
 
-I take a sip from the glass, completely surprised by the rush and taste. Katorin cackles.
+Katorin laughs.
 
+Katorin: “No, they don’t. They’re open.”  
+Katorin: “I wonder about you sometimes, Chelsea. I was going to say that I’d introduce them to you.”  
+Chelsea: “Well, uh, about that…”  
+Katorin: “What? You’re not nervous about meeting them, are you?”  
+Chelsea: “No, it’s not like that, it’s…”  
+Chelsea: “I was hoping to introduce myself to them…”
 
-- (Choice)
-    - "I wasn't ready for that."
-        - Katorin: "Well, I can clearly see that!"
-        - Katorin: "Good to see you let loose a little, though."
-    - "This stuff's strong!"
-        - Katorin: "The strongest they have."
-        - Katorin: "There's a reason why I told you not to down the glass."
-        - Player: "I only took a sip..."
-        - Katorin: "Exactly."
-    - "Do you drink this regularly?"
-        - Katorin: "No, why would I want to have one 'knock me the frick out'?"
-        - Player: "Why would you even give it to me?"
-        - Katorin: "Jeez, [Player], live a little!"
+Not that I don’t Katorin or anything, but I’m just a little nervous when it comes to relationships. My previous ones dried up quickly, so I think a lot about doing this the right way.
 
-I hear clapping suddenly and take a look on stage. Without realizing it, the opening band finished. I sheepishly join the round of applause and blush.
+Katorin: “Ah, I see. Yeah, that’s fine!”  
+Katorin: “You have a plan or something? Because I was just going to take them backstage where Jordan and Ben are.”  
+Chelsea: “Well, I wanted to talk somewhere else…”
 
-Katorin: "Haha, you missed the last song."
-Player: "Shut up, you..."
+Katorin looks at me before nodding. I can see the lightbulb go off in her head. 
 
-Katorin giggles. I sigh and take another sip, watching as the opening band walks offstage. "Everybody Wants to Rule the World" plays on a loudspeaker. The whine from the loudspeaker seems a lot more amplified after taking a couple of drinks. I hate it.
+*Uh oh…*
 
-Katorin: "Better not miss the next band."
-Player: "I'm not going anywhere, Katorin."
-Katorin: "Okay, just making sure! It seems like you have an allergic reaction to whatever's playing on the loudspeaker."
-Player: "The loudspeaker sounds very whiny. Doesn't matter what song is playing."
-Katorin: "I guess they haven't fixed it yet, then."
-Player: "Wonderful. The drinks certainly aren't helping."
-Katorin: "The next band's gonna run up on stage at any moment. You'll be spared."
-Player: "Thank goodness."
+Katorin: “… you’re planning to show up in costume, aren’t you?”  
+Chelsea: “W-what? No, nothing like that! I just…”
 
-I lean back in my chair and look at the stage when the loudspeaker cuts out. Three people wearing animal costumes come up on stage with instruments. Katorin loudly cheers the band on, nearly startling me out of my seat. I awkwardly clap loudly to contribute. The band sets up their instruments, performs a couple of sound checks, and quickly discusses amongst each other. Eventually, one of the members steps towards the microphone. Their costume, which closely resembled a coyote, was extremely detailed and felt uncannily close to the real thing. Of course, some human traits remain, such the long hair, clothing, and even shoes.
+On second thought, that idea does seem plausible. I’m not afraid to show myself or anything, and I’m sure her colleague would be fine meeting an anthro-coyote like me. But I also really like wearing my costumes. I spend a lot of time creating them, and I feel like they’re a big part of me. Some like going with really pretty dresses or outfits; I like expressing myself in ways that seem counterintuitive.
 
-???: "Hellooooo, everyone!"
+Katorin: “You’re pondering. Man, I thought I had the upper hand on you!”  
+Chelsea: “Well, it doesn’t sound like a bad idea…”
 
-I can't tell what surprises me more: the incredibly detailed mouth movements of the mask, or her voice. I break out of the trance of scrutiny almost immediately when Katorin cheers. Likewise, I join in, trying to act natural. As the coyote keeps talking, I lose myself in my thoughts. Her voice is somewhat jarring, yet soothing at the same time. Katorin leans closer to me and whispers.
+Katorin scoffs lightly.
 
-Katorin: "You see something you like up there?"
-Player: "Eh?"
-Katorin: "I'm teasing. No one's able to take their eyes off of Chelsea."
-Player: "I... can see why."
+Katorin: “I’m gonna regret giving you this idea, aren’t I?”  
+Chelsea: “I hope not! You know what happened to the last times I tried to date someone.”  
+Chelsea: “They never get that far!”  
+Katorin: “I suppose you have a point. Perhaps I won’t regret it.”  
+Katorin: “So how do you want to do this?”
 
-*Chelsea...* that's an interesting name. I glance around at the other band members to keep my mind off of her. They weren't necessarily as creative with their costumes, unfortunately. Just some face paint and cat ears...
+I think for a moment. How do I want to go about this, exactly? I take a few seconds before I get an idea.
 
-Thankfully, I didn't have to look too long. The band readies their instruments and jumps right into their first number for the night. They sound really similar to a lot of the eighties and new age bands of the time. Between the chords and Chelsea's on-point singing, they capture the vibe really well. I take another sip from my glass as Katorin shakes her head to the beat of the music. The rest of the bar is jamming along to the beat as well. I slightly bob my head to the music, too.
+Chelsea: “Well… maybe I go to them?”
 
-The band plays a couple more songs with various lyrics, themes, and styles. Everyone's enjoying the music and getting completely slammed. I can start to feel the effects of my drink the further I go into the night. Tonight couldn't go any more smoothly.
+Katorin covers her face and sighs.
 
-Chelsea looks in our general direction, spots Katorin, and waves slightly. I nod my head in acknowledgement. She sings a couple more lines before glancing at me, realizing that Katorin's not alone this time. Or so I think; her eyes change in demeanor for just a brief moment. It's hard to discern exactly what she's thinking; she's an excellent performer. I take another sip from my glass and dismiss the thought.
+Katorin: “Chelsea, that’s gonna look suspicious.”  
+Chelsea: “Not if I’m in costume…”  
+Katorin: “Especially if you’re in costume! What the hell are you talking about?”  
+Chelsea: “… you think a hammer is scary?”  
+Katorin: “So you’re gonna have them think they’re tripping?”  
+Chelsea: “Oh, come on, Katy! I’m trying my best here…”
 
-The band keeps performing for a few more songs; before I know it, the gig's already over. The members say their goodbyes and thank-yous before walking offstage for the night. Everyone cheers in unison, myself included. Katorin nudges me to get out of my chair.
+I let out a short whine. I may not always act like a puppy, but I slip here and there. Katorin sighs.
 
-Katorin: "Alright, up you go, [Player]! I got a surprise for you."
-Player: "A surprise? Oh, my..."
+Katorin: “Well, the least I could do is set their expectations so that they *don’t* think you’re a serial killer.”  
+Katorin: “It’s a stretch, but-”
 
-I'm not confident in Katorin's surprises. More often than not, they end up becoming embarrassing moments for me.
+In a moment’s notice, I squeeze her and jump.
 
-Player: "You better not have me take off my pants or something."
-Katorin: "Pfft, it's not *that* kind of surprise, [Player]."
+Chelsea: “Oh, thank you, thank you, thank you! You won’t regret it!”  
+Katorin: “No problem, you big goofy pupper…”
 
-Hmm, at least she admits it. I get up from the chair and walk with her backstage. The drink starts to wear off.
+I eventually let go.
 
-Player: "Why are we heading backstage?"
-Katorin: "You'll see!"
-Player: "Whatever it is, I'm not going on stage. At all."
-Katorin: "You're funny, [Player]."
+Katorin: “Just please don’t give off murderer vibes. Last thing I need is for them to not show up to work on Monday.”  
+Chelsea: “You think this face is capable of murder?”  
+Katorin: “God, you and your puppy eyes…”
 
-I follow her all the way to the back, where two of the band members are. I can overhear their conversation.
+I lightly giggle.
 
-???: "That was a night, wasn't it?"
-???: "Sure was, Jordan! I don't think I've ever seen the crowd get as wild as they did tonight."
-Jordan: "Yeah. And no surprise that Katy was there."
-???: "Looks like she brought a boyfriend, too."
-Jordan: "Ben, that's probably just a colleague of hers or something."
-Ben: "I know, I'm just teasing..."
+Katorin: “No, but… nevermind.”  
+Katorin: “I’ll figure out something, but I’ll text you their address.”  
+Katorin: “Please, don’t screw this up. For you, at least.”  
+Chelsea: “Thank you, bestie…”  
+Katorin: “Well, go on now, Marty! You got a costume to put on and someone to impress.”  
+Chelsea: “You got it!”
 
-Katorin steps forward.
-
-Katorin: "So, you think I'd date this absolute chad right here?"
-
-She waves her hand and points at me.
-
-Ben: "Well, speak of the devil herself."
-
-One of the members, Ben, walks over towards Katorin and braces for a hug.
-
-Ben: "Did you enjoy yourself tonight? I hope we put on a good show for ya."
-Katorin: "Absolutely blew it out of the park as always, Ben."
-Ben: "So, who's this guy that you brought with you?"
-Katorin: "This is [Player], that colleague I was telling y'all about."
-Katorin: "We just finished up Snowflake this morning and launched."
-Jordan: "I heard about that. Congratulations."
-Katorin: "Thanks, Jordan."
-
-Katorin looks at me and gestures to come forward. I comply with her request.
-
-Jordan: "A pleasure to finally meet the legend himself."
-Jordan: "I'm Jordan, and this is Ben."
-
-*The legend himself?* What did Katorin tell them, exactly?
-
-Jordan extends his hand for a handshake. I firmly grip his hand and finish the handshake.
-
-Player: "A pleasure to meet you."
-Jordan: "Katorin tells us you're quite the project leader."
-Player: "Oh, did she?"
-Ben: "Yeah, apparently Snowflake couldn't have gone smoother if it weren't for you."
-I blush in embarrassment.
-
-Player: "Well, that's interesting..."
-Ben: "Sounds like she didn't tell you this upfront."
-Player: "First I've heard."
-
-Katorin giggles.
-
-Player: "I guess you're close with Katorin, then?"
-Jordan: "Of course! We go back a long way."
-Ben: "Katy had just moved in across from Jordan when we met her."
-Jordan: "Ah, that's right, when I was still in the apartment complex..."
-Jordan: "I think we were all together for Chelsea's birthday."
-Ben: "Yeah, that's right! That was a blast."
-Katorin: "I probably wouldn't have had anything better to do if Chelsea didn't invite me over."
-
-*Wow, she's really close with these people.* I smile and nod.
-
-Player: "You put on quite a performance tonight."
-Jordan: "Thanks for the confirmation."
-Ben: "We try."
-Player: "May I ask about the cat ears?"
-Ben: "Felt like a fun idea for tonight."
-Player: "Why not? Seems like Chelsea went the full 110%."
-Jordan: "What do you mean?"
-Player: "I admire the level of detail on her costume. She really nailed the coyote look."
-
-Ben, Katorin, and Jordan look at each other in confusion. *Am I slurring my words?* They soon after burst into laughter, presumably understanding what I said.
-
-Jordan: "Oh, man. Who wants to break the news to this guy?"
-Player: "I'm sorry?"
-Ben: "Bud, they ain't wearing a costume. That's how they look when waking up in the morning."
-
-I take a moment to process what the two are telling me. *Am I that drunk? Are they pulling my leg?*
-
-Jordan: "You alright there, [Player]? You look like you've seen a ghost."
-
-*My, God... she's an Anthro...* They've co-existed alongside us in New Rollinsport for years, though no one exactly remembers how they came to be. Nonetheless, it's just an accepted fact that they exist here. And I've just met one tonight, on stage, thinking they were wearing a costume. I must be really, really drunk right now.
-
-Jordan: "Somebody, get this man some water! Looks like he's about to feint or something."
-
-Ben grabs a bottle of water from a nearby cooler and hands it to me.
-
-Ben: "Drink up. I think the knockout juice Katorin ordered you is a little too strong..."
-Katorin: "Strong? He was barely sipping on it."
-Ben: "I don't think you realize just how strong this stuff is."
-Ben: "Not even Chelsea would touch it. And they don't mind getting plastered every once in a while."
-Katorin: "I didn't think it'd be *that* strong..."
-Jordan: "Kinda surprised the bartender even sells that."
-
-Ben guides me to a chair.
-
-Ben: "Just take a seat here and drink that water. And don't let the whole anthro thing get to your head."
-Ben: "Almost everyone that's met us made the same mistake. Many times."
-Jordan: "Yeah, Chelsea's pretty chill about it."
-Katorin: "Speaking of which..."
-Jordan: "They left early. Forgot they had matters to attend to, apparently."
-Katorin: "Oh..."
-
-Katorin's phone buzzes. She excuses herself and checks her text messages. Ben and Jordan take a seat.
-
-Jordan: "I should probably take these two home."
-Ben: "Wouldn't hurt. Better that they remain safe."
-Jordan: "Would save them an Uber, at the very least."
-Player: "Thanks. You don't have to."
-Jordan: "No need to worry. Any friend of Katorin is a friend of mine, and that's just what friends do."
-Player: "I'm definitely gonna drink more water and rest after all this."
-Ben: "Good idea."
-Jordan: "What was she thinking, giving you that glass?"
-Player: "Wanted me to live a little, I guess."
-Ben: "Certainly not the way I'd do that."
-
-Ben leans back in his chair.
-
-Ben: "You know, it's a bit of a shame that Chelsea couldn't stay afterwards. I'm sure they'd love to meet ya."
-Jordan: "They'd love to meet anyone new, really."
-Player: "Oh, does Chelsea go by they/them pronouns? My apologies."
-Jordan: "Ah, you're fine. Chelsea answers to both."
-Jordan: "I'm not sure whether it'd be a good idea to get into the details right now."
-Jordan: "Maybe when you're not completely plastered like this..."
-Player: "Fair enough."
-
-Katorin re-enters the room.
-
-Jordan: "Hey, I'm gonna take this guy back home. You screwed him up real good."
-Katorin: "Oh, OK. I just called for an Uber... guess I'll just go alone."
-Katorin: "By the way, [Player], one of my friends wants to send you some mail. You cool with me giving them your address?"
-Player: "As long as it's not malicious, sure."
-Ben: "You sure that's a good idea? You're not really thinking straight."
-Player: "Maybe, maybe not. We'll see what happens."
-Katorin: "I'll let them know, then. I'm sure it isn't anything evil."
-Katorin: "I'm gonna head out, then. Good night, everyone! Enjoy the weekend."
-Player: "You, too."
-
-Jordan and Ben get up as Katorin walks out of the room.
-
-Jordan: "Let's get you home. What's your address?"
-Player: "46 Federighi Avenue. It's an apartment building at the intersection of Fereghdei and Sun Valley."
-Jordan: "Alright. That's on the way back to my place, actually. Works out."
-Ben: "Let's get him in the car."
+I walk away from the tavern and walk down Bouchard Street. This is one of the silliest ideas I’ve ever done, but I’m sure Katorin will find a way to make this work.
 
 ---
+
+Well, this is it. This is the address she gave me. I’m kinda nervous, but I think I’ll pull it off. Here goes nothing…
+
+I knock on the door.
 
 > Knocking sound plays.
 > 
 
-I moan as I wake up from the couch. I barely remember Ben and Jordan driving me back home, and me downing a bottle of water before crashing on the couch.
+Some time passes. My heart’s racing. *Did they hear me? Are they alive?* Katorin did say that they were pretty buzzed…
+
+I knock again for good measure, if not to just allay my worries.
 
 > Knocking sound plays again.
 > 
 
-Player: "I'll be there!"
+Colleague: "I'll be there!"
 
-I take a sip from the second bottle of water I had on the coffee table and make my way over to the door. Upon opening it, I soon discover a tall... hammer? *I'm not dreaming or hallucinating this, right?* I shake my head to try and wake up, to some success. *Nope, this is real.*
+I sigh in relief. My heart eventually beats back into a normal-ish rate when Katorin’s colleague opens the door. They take a quick look at me and my costume, letter in hand. If this backfires, at least the letter should work…
 
-Player: "I... have so many questions..."
-???: "I won't be long, I promise. I'm just here to hand-deliver mail."
+Colleague: "I... have so many questions..."
+Chelsea: "I won't be long, I promise. I'm just here to hand-deliver mail."  
+Colleague: "So you must be the friend that Katorin was talking about, then."
+Chelsea: "That would be correct. Here, maybe this will give you some answers."
 
-The voice sounds somewhat familiar, but I can't put my finger on it.
+I hand them the envelope.
 
-Player: "So you must be the friend that Katorin was talking about, then."
-???: "That would be correct. Here, maybe this will give you some answers."
+Colleague: "... you couldn't just mail this?"
+Colleague: "I, uh, didn't want to pay for postage..."
 
-The hammer hands me a small envelope.
+They look at me for a second, thinking. *Please tell me this will work…*
 
-Player: "... you couldn't just mail this?"
-???: "I, uh, didn't want to pay for postage..."
-???: "You should get some rest. My apologies for not formally introducing myself, but I should get going."
-Player: "Wait, what if this piece of mail doesn't answer my questions?"
-???: "It'll at least give you a head start, I'm sure of it. Goodnight."
+Colleague: “… Chelsea, isn’t it?”  
+Chelsea: “I’m sorry?”  
+Colleague: “You’re the one that performed tonight at the tavern, right?”  
+Chelsea: “Oh, yeah, that’s me.”  
+Colleague: “Huh. This is… interesting. I didn’t realize you had a hammer… costume…”
 
-The hammer walks away. I barely catch a glimpse of the full figure, only noticing a small portion of her teal-colored shoes. I sigh, close the door, and walk back to the couch. Taking a seat and opening the envelope, I notice a small letter. I have nothing better to do, so I'd might as well just read this.
+I chuckle nervously. *Yup, this is going as well as I expected…*
 
-> Dialog window that shows the letter is present.
-> 
+Chelsea: “Well, uh, I don’t wear costumes all the time.”  
+Colleague: “I see. How come you’re wearing it now?”  
+Colleague: “I hope I don’t give off anything to where you’d want to hide yourself…”  
+Chelsea: “Oh, no! It’s nothing like that!”  
+Chelsea: “I just wanted to try something different, you know? And spice up my introduction…”  
+Colleague: “Oh, okay. Should I open this letter now, or… ?”
 
-*... what?* This practically answered nothing. Who is this person? Why do they want to date me? Why did they decide to wear a hammer costume? I sigh and lay down on the couch. Maybe I'm just overthinking this a little. She did say that she knows Katorin, and that Katorin has talked to her about me. I'd might as well give it a shot. Reaching for my phone, I decide to text the number on the letter and accept. There's probably a lot that could go wrong, but I'm hoping for the best with this.
+Considering this is going better than I expected, I guess I should tell them upfront.
 
-> Scene fades to black.
->
+Chelsea: “Well, I guess you don’t need to now. It was more of a backup for something I wanted to ask.”  
+Chelsea: “I was, uh, wondering if you wanted to head to the café down the road with me some time…”
+
+They stop for a second, quizzically looking at me. *Please tell me that’s a good thing…*
+
+Colleague: “Like, on a date or something?”  
+Chelsea: “Well, I mean if you’re comfortable with that. If you don’t want to, that’s fine, we could-”  
+Colleague: “Sure.”  
+Chelsea: “I-I’m sorry?”  
+Colleague: “Sure, I’d like that. My Friday evenings are free, anyway.”
+
+*Oh, sweet relief!* I quietly sigh to myself.
+
+Colleague: “You know, this is a pretty weird way to ask someone out on a date. You do this often?”  
+Chelsea: “Haha, not really… This is a first.”  
+Chelsea: “I guess you could say the normal way of doing it doesn’t usually work for me.”  
+Colleague: “Interesting. Does quarter to six tomorrow work for you?”  
+Chelsea: “Yeah, that works for me.”  
+Colleague: “Sounds like a plan, then.”  
+Chelsea: “Thanks for giving me the chance, despite this…”
+
+I gesture my hands to my dress.
+
+Colleague: “Well, I suppose it could have been worse. Though that dress does look good on you.” 
+Chelsea: “Oh, uh, thanks! I had a small wardrobe malfunction. It’s a long story.”
+
+I weakly smile. I’d like to save the story of my more elaborate dress’s seams ripping for tomorrow.
+
+Colleague: “Fair enough.”  
+Chelsea: “Just one other quick question…”  
+Chelsea: “Are you OK with me wearing this tomorrow? Maybe not the dress or anything, but at least the helmet?”  
+Colleague: “You want to hide from the paparazzi or something?”  
+Chelsea: “Haha, no. Thank goodness I don’t have one.”  
+Chelsea: “But I kind of like wearing this helmet, at least. It’s a long story, but it feels like I get to be more of myself this way.”  
+Colleague: “Like you want to be secretly a hammer or something, or…?”  
+Chelsea: “Oh, no, I’m more than happy with who I am. I just like wearing costumes sometimes to express myself.”  
+Colleague: “Oh, gotcha. I mean, if that makes you feel more comfortable, that’s fine by me.”  
+Chelsea: “Thanks. It means a lot.”
+
+I slightly look off to the side. I don’t think they can see me blushing. They chuckle lightly.
+
+Colleague: “I never thought I’d put these words together, but…”  
+Colleague: “God, you’re a cute hammer.”
+
+I giggle a little. At least they appreciate the costume.
+
+Chelsea: “Thanks…”  
+Colleague: “Say, did Katorin tell you my name or anything like that?”  
+Chelsea: “Well, not really, but…”  
+Sam: “Sam. They/them pronouns.”
+
+Sam offers their hand for a shake. I put my hand in and shake it.
+
+Chelsea: “Chelsea. She/her or they/them pronouns.”  
+Sam: “Perfect.”  
+Sam: “I’d like to talk some more, but I’d like to get to bed and drink some more water so the hangover isn’t so bad. See you tomorrow?”  
+Chelsea: “Sounds perfect. See you tomorrow.”  
+Sam: “Alright, goodnight. Nice meeting you.”  
+Chelsea: “Nice meeting you, too, and goodnight.”
+
+I walk across the hallway to the elevator not long after Sam closes their door. As soon as I get into the elevator, I squeal.
+
+Chelsea: “Yes! I did it!”
+
+The other person in the elevator that I somehow didn’t see turns around and looks at me in confusion.
+
+Chelsea: “Ehehe, long story…”
+
+The person turns around and looks at their phone. *Whoops…*
+
+But, man does it feel nice to finally go on a date with someone. I hope this goes well; Sam seems pretty nice and understanding.
