--- a/Shounin/Story Source/ch03.md
+++ b/Shounin/Story Source/ch03.md
@@ -1,380 +1,235 @@
-*Another Friday...* I'm pretty anxious to see Marty. Not that being around them is nerve-racking; in fact, it's quite the opposite. The first date was very, very awkward, though. At least that's what Katorin told me on Monday after spilling the beans. I hope we move past that tonight.
-
-I sit patiently in front of Sun Valley Café, waiting for Marty to arrive. The ocean sparkles in the sunlight as it crashes against the shoreline. This evening feels magical and yet enigmatic. Watching the waves put me at ease, and I forget being anxious for a while. That is, until I feel a light tap on my shoulder.
-
-I snap out of the trance and turn around to see who tapped me. Surprisingly, I am greeted by Jordan's presence instead of Marty's.
-
-Player: "Kya~!"
-Jordan: "Oops, didn't mean to scare you. I take it you were expecting someone else."
-Player: "Yeah, sorry for the knee-jerk reaction there."
-Player: "It's gonna sound weird, but I'm waiting for a hammer to show up for our date tonight."
-Jordan: "A hammer?"
+Ah, Friday… it’s finally here; it feels like I’ve been waiting forever. Maybe it’s because I’m excited to see Sam again, but it could’ve also been a lot of other things. I guess it’s just been a long week. 
 
-Jordan thinks to himself and pauses.
+Well, no matter. As I sit in front of Le Papillon Pâtisserie and wait for Sam, I pull out the book I checked out from the library from my purse and pick up where I left off. *After the Mirage*, it’s called; I’ve been waiting to read this addition to the series for months now. This one’s a page-turner, and I’m already halfway through the book.
 
-Jordan: "Oh, I see... I get what you mean now."
-Jordan: "I'm kind of surprised, actually."
-Player: "By what?"
-Jordan: "Eh, it's nothing really. Forget I said that."
+Sam arrives and sits next to me just as I finish my current chapter.
 
-(Choice)
+Sam: “Hey there. Whatcha reading?”  
+Chelsea: “Oh, just this new murder mystery book.”  
+Chelsea: “The library received it on Thursday and reserved it for me.”
 
-- "Tell me!"
-    - Jordan: "I guess this won't end well if I don't."
-    - Jordan: "I might actually know this hammer."
-    - Jordan: "Of course, out of their interests, I should probably keep their identity hidden."
-- "Are you sure?"
-    - Jordan: "Of course, just a silly observation. That's all."
-    - Jordan: "You're gonna end up making the same observation at some point, anyway."
+I close the book and hand it to Sam. Sam inspects the cover, flipping it around occasionally.
 
-Player: "Alright, then."
-Jordan: "When are you supposed to meet up with this hammer?"
-Player: "Right about now."
-Jordan: "Hmm. No sign of them?"
+Sam: “Huh. Never heard of this one. Looks like you’re halfway through this one, too.”  
+Chelsea: “Oh, this one’s a page-turner, that’s for sure!”
 
-Jordan looks off into the distance.
+Sam hands me the book, and I stash it into my purse.
 
-Jordan: "Ah, I take that back."
-Jordan: "I shan't keep you long."
-Jordan: "Have fun on your date."
-Player: "Umm, thanks."
+Sam: “So, did you have anything in mind?”  
+Chelsea: “How about we head to Kellihim Park? There’s a spot I really like to sit at.”  
+Sam: “Sure, why not.”
 
-Jordan walks the other direction. I turn around and look in the direction Jordan was facing. I see Marty in the distance, coming closer. They wave at me, so I wave back.
+The two of us get up from the bench and start walking down the road until we reach Narock Boulevard. As we continue walking down Narock Boulevard, I look around and spot the dealership across the street.
 
-Marty: "Hey, sorry for being a little late."
-Marty: "It turns out getting over here on foot is a little longer than I expected."
-Player: "It's fine."
-Marty: "Who was the gentleman that spoke to you?"
-Player: "Oh, him? He's one of Katorin's close friends. One of the band members of *The Serif*."
-Marty: "Really? I wonder what he wanted from you."
-Player: "I don't know. He startled me, though."
-Marty: "Oh?"
-Player: "He tapped me on the shoulder as I was staring at the water."
-Player: "I thought it was you, so I was startled to see him instead."
-Marty: "Oh, uh, alright then."
-Player: "Do you want to head into the café, or are you too worried about taking off your helmet?"
-Marty: "Ahaha, I'm not worried! I promised that I'd come up with a solution."
+Chelsea: "How long has that dealership been there?"  
+Sam: "For as long as I can remember. Why do you ask?"  
+Chelsea: "I don't think I've ever noticed it, really."  
+Sam: "You seemed to know where it was two weeks ago."
 
-Marty points to the front of their head, where I notice a small zipper line.
+- "You think they capitalize on extended car warranties?"
+    - Sam: "Right, the only business to get into nowadays..."
+    - I snicker as Sam smirks.
+    - Chelsea: “Come on, you have to admit that was a good one.”
+    - Sam: “Yeah, I suppose.”
+- "I guess they sell cars?"
+    - Sam: "Well, aren't you Captain Obvious?"
+    - Sam shoves me and laughs a little.
+    - Chelsea: “Sometimes you have to point out the obvious.”
 
-Player: "... you altered your costume?"
-Marty: "Sort of. I thought I needed to when I realized I had this helmet in the closet."
+Sam follows me to the spot in Kellihim Park where I wanted to take them. A bunch of trees surround the spot, allowing the sunlight to peek through the leaves. The lush, green grass takes in the sunlight and glows a little. I sit down next to a tree and pat to an open spot next to me. Sam follows and takes a seat next to me, leaning against the tree.
 
-Marty knocks on the side of their helmet, hearing a small cushioned thud.
+Sam: "Wow. How often do you come here?"  
+Chelsea: "Eh, about once a month. Maybe every two weeks."  
+Chelsea: "It just kind of depends on the occasion."  
+Sam: "Well, you certainly have a knack for finding these sorts of places."  
+Chelsea: "I guess I know where to look when I need some inspiration."  
 
-Player: "Huh. Imagine that."
-Player: "How are you going to drink, though?"
-Marty: "Easy, I do it from a straw."
-Player: "You have a straw that long?"
-Marty: "I'll make it work, you'll see!"
-Player: "Alright, if you say so."
+I take off my shoes and set them aside. Grabbing the zipper at the bottom of my dress, I zip up the circumference and readjust my body.
 
-The two of us walk to the café entrance. I open the door and hold it for Marty. Marty nods in appreciation as I follow behind them, letting the door close on its own.
+Sam: “Hold up. Your dress can turn into a little cocoon?”  
+Chelsea: “I meant to wear this one when I first met you, but I needed to fix the seams around the sleeves.”  
+Chelsea: “I finally got around to it on Wednesday after ordering some new threading.”  
+Sam: “Oh. That’s, uh, interesting…”  
+Chelsea: “I mean, have you ever seen a hammer with shoes and arms?”  
+Sam: “Not until a couple of weeks ago. But you still have the arms here.”  
+Chelsea: “Well, of course. Kinda need that to do stuff, right?”  
+Sam: “Yeah, I suppose.”
 
-The café seems quiet this evening. A couple of people sit at some tables, talking to each other with lattes in hand. The barista from behind the counter is busy making coffee. I notice a pianist playing some classical music towards the back of the café.
+I slide my legs down and cross them to get a bit more comfortable.
 
-Marty: "Ooh, this is one of my favorites..."
+Chelsea: “You know, I’m kind of surprised that you’d ask about the stub, but not even bat an eye at my ability to read with the mask on.”  
+Sam: “I mean, you’re able to see me under that mask, so I just assumed you have really good eyesight.”  
+Chelsea: “Fair enough.”
 
-I turn slightly, expecting to see Marty look at the different pastries in the glass case. To my surprise, their invisible gaze is locked on the pianist.
+I lean against Sam on the tree.
 
-Player: "You like classical music?"
-Marty: "A little. Mostly contemporary classic."
-Marty: "This piece is just so calming."
-Marty: "It reminds me of this one video game I played a couple of months back."
-Player: "What video game was that?"
-Marty: "I can't remember the name, but it was a puzzle game. Pretty trippy."
+Chelsea: “I can unzip my stub and let my paws stick out, if that’s more comfortable for you.”  
+Sam: “Nah, it’s fine. I was just merely curious.”  
+Sam: "Normally, if someone in a costume like that decides to lean up against me, I would be weirded out."
+Sam: "But you're an exception to the rule."
+Chelsea: "Aww, I get special exemptions! How sweet of you."
 
-(Choice)
+The two of us laugh wholeheartedly.
 
-- "Do you remember what it was about?"
-    - Marty: "Something about dreams. The rest is kinda blurry."
-    - Marty: "The only thing that's fresh in my mind right now is the music."
-    - Player: "That's fair, I suppose."
-    - Marty: "I should probably find it and play it again."
-- "We can look it up later."
-    - Marty: "It's okay, you don't need to do that."
-    - Marty: "I can just text you when I find it in my game library again."
-    - Marty: "Come to think of it, I wouldn't mind playing it again."
-- "Not sure what it is, but sounds like fun."
-    - Marty: "I kind of want to play it again now. But maybe another time."
+Sam: “I don’t suppose you have a blanket in your purse, do you?”  
+Sam: “The grass is starting to get a bit itchy.”  
+Chelsea: “I do, actually. Hold on.”
 
-Marty: "Maybe you'll be able to watch some time."
-Player: "Doesn't sound like a bad idea."
+I put my purse in my lap and pull out my Hexcode blanket, and Sam gasps lightly.
 
-I step over to the counter and look at the menu. Marty follows behind, ignoring the glass case.
+Sam: “First off, how in the world did you fit that into your purse?”  
+Chelsea: “Oh, it’s a lot deeper than it looks. It’s no magic carpet bag, though.”  
+Chelsea: “I still haven’t figured that out. Mary Poppins has the upper hand, there.”  
+Sam: “Right… and the other thing…”  
+Chelsea: “Hmm? What is it?”
 
-Player: "Would you like anything from the case?"
-Marty: "I had some dinner a little earlier. Thanks for the offer, though!"
+We get up for a brief moment so I can shake the blanket and place it neatly on the grass.
 
-As soon as the barista is finished and sets aside the previous orders, he comes up to the counter.
+Sam: “Is that the background for the Hexcode logo?”  
+Chelsea: “It sure is! I figured you’d notice.”  
+Sam: “Did you order that online or…?”  
+Chelsea: “Nope, made it myself. Katy gave me the visuals, and I just did the rest.”
 
-Barista: "[Player]! I didn't expect you to be here at this hour."
-Player: "I'm on a date, believe it or not."
+Sam watches as I sit down on the blanket.
 
-The barista looks over to Marty and smirks at me.
+Sam: “Oh my God, I have to take a picture of this…”  
+Chelsea: “Oh, okay! You want me to pose or anything?”  
+Sam: “Nah, you’re in a perfect spot for this.”
 
-Barista: "I didn't realize you loved your tools that much."
-Player: "I didn't realize you'd care that much about it, Mark."
+Sam pulls out their phone, lines up the shot, and takes a picture.
 
-Marty giggles. Mark looks in total shock and is unable to come up with a witty comment in time. Eventually, he snaps out of it.
+Sam: “That’s awesome. Now I get the whole hammer thing.”  
+Chelsea: “Really?”  
+Sam: “I mean, the blanket makes it kind of obvious now.”
 
-Mark: "Well, uh, I didn't realize this was what you were doing over there at work!"
-Mark: "Intelligent and sentient hammers. That's impressive, [Player]!"
+I giggle lightly. As Sam puts their phone away, I scoot over a little so Sam can sit down. They take a seat next to me and rest their hand on my shins.
 
-(Choice)
+Sam: “So, how come you wanted to make the costume for Hexcode?”  
+Chelsea: “Well, it’s a bit of a dirty secret, but…”
 
-- "Why are you so surprised?"
-    - Mark: "Surprised? Nah, I'm just a good actor."
-    - I doubt he's acting this time. He's surprised by Marty for some reason.
-- "This isn't my line of work. It's Katorin's."
-    - Mark: "Katorin, you cheeky little..."
-    - Mark chuckles.
+I try to lean in as close as I can to Sam without disrupting them and start picking at my fingernails.
 
-Mark: "Let me take your order real quick. You want your usual, or...?"
-Player: "A small mocha latte is good for me, actually."
+Chelsea: “I may be learning how to make apps for Lotus devices.”  
+Sam: “No way! You’re serious?"  
+Chelsea: “Well, my father liked to tinker with microcontrollers and electronics in his spare time when I was a pup.”  
+Chelsea: “So I learned some programming during my school years. You know, basic assembly instructions and C.”  
+Chelsea: “Of course, I knew my future had to have been in music, but it was a nice little hobby.”  
+Sam: “Huh, that’s really interesting! Does anyone else know?”  
+Chelsea: “Eh, not really.”  
+Sam: “Not even Katy?”  
+Chelsea: “Never asked about it. I kind of stopped after I released my first album, though.”  
+Sam: “Oh, how come?”  
+Chelsea: “Dude, Subjective-E is incredibly hard to learn. I have no idea how you write anything in it!”  
+Chelsea: “It just looks like a word soup, if I’m honest…”
 
-I turn to Marty.
+Sam laughs, lightly slapping my shin.
 
-Player: "What would you like me to get you, Marty?"
-Marty: "Uh... I'll just take the same thing."
+Sam: “Subjective-E is really old, Chelsea. That’s for legacy stuff.”  
+Sam: “The mobile team at my company uses Lift to make Lotus apps. Much more friendly.”  
+Sam: “Sorry that you had to subject yourself to the horror…”  
+Chelsea: “Y-you’re kidding me, right? I, uh…”
 
-Marty seems nervous about Mark. *Do the two know each other?* I dismiss the thought and turn back to Mark.
+*Why me? How do I manage to pick the wrong language to learn? God, that’s embarrassing…* I sigh and slouch a little. Sam swings around and hugs me.
 
-Player: "Double that."
-Mark: "Don't worry about that second one. It's on the house."
+Sam: “Don’t be so hard on yourself about it, Chelsea. They certainly don’t make it easy to figure out the first time around.”  
+Sam: “But I still think it’s pretty cool that you know a little bit of what I do.”  
+Sam: “And low-level stuff, too. Gotta give props there.”
 
-Marty's head tilts backwards in slight confusion, or so it seems by the way they're fidgeting.
+I weakly giggle, trying to dismiss my embarrassment.
 
-Player: "Oh, well, thanks. I would've-"
-Mark: "Don't stress it, buddy. You focus on keeping this hammer happy."
+Chelsea: “Well, it’s been a while since I touched it. My computer’s just so old that even looking through my photos is a nightmare.”  
+Sam: “Oh? How old is it?”  
+Chelsea: “I got it in 2006.”  
+Sam: “But, it still functions, right?”  
+Chelsea: “Barely. Katry tried to fix it. Upgrade after upgrade, but the thing’s on its last legs.”  
+Chelsea: “Even Papa says I should get a new one.”  
+Sam: “Is there anything stopping you from doing so?”  
+Chelsea: “Does me being old-school count?”
 
-I swipe my card to pay for my drink and watch as Mark steps away from the counter to make the order. Marty and I walk away from the counter and sit at a nearby table.
+Sam chuckles.
 
-Player: "Does Mark know you?"
-Marty: "Doesn't he know everyone?"
-Player: "That's valid, I suppose. He just seemed surprised."
-Marty: "I don't really buy the acting, but I can't blame him for trying."
-Player: "I'll figure it out at some point."
-Marty: "Oh, are you playing detective now?"
-Player: "Not really."
-Marty: "That's a shame. I like mysteries, especially murder mysteries."
-Marty: "Nothing like getting cozy on the couch and getting caught up in a good 'whodunit'."
-Player: "Interesting."
-Marty: "I do need to go back into the library sometime next week to check out some new ones."
-Marty: "I'm hoping they have the next one in the series. Been a real page turner for sure!"
-Player: "... I thought you meant a series you were watching. Whoops."
-Marty: "Haha, it's fine! I don't really do TV."
-Marty: "The closest you'd find me watching would be videos on YouTube."
+Chelsea: “Like, seriously! I handwrite my lyrics and stuff.”  
+Sam: “Oh, there’s nothing wrong with that. I know there’s a pedagogical benefit to it.”  
+Chelsea: “Oh. Well, I guess I just never get around to it.”  
+Sam: “That’s fair. Just keep going at your own pace.”
 
-Mark places two cups on the counter and signals me to come over.
+Sam grabs the bag they’ve been carrying around this whole time and brings it towards us.
 
-Player: "Excuse me while I grab the lattes."
+Sam: “Now, how about we change the subject a little bit? I have something for you.”  
+Chelsea: “Hmm? What’s that?”
 
-I walk over to the counter and grab the cups.
+Sam reaches into the bag and pulls out a box.
 
-Mark: "So, how are you liking her?"
-Player: "... I'm sorry?"
-Mark: "The hammer."
-Player: "Oh, Marty? They're fine."
-Mark: "I hope so. You two seem like a good fit."
-Mark: "I'll tell ya, buddy, she won't disappoint."
-Player: "How do you know?"
-Mark: "I'd tell you, but then I'd have to kill you."
-Mark: "Okay, Mr. Bond. Keep your secrets."
+Sam: “I checked with Katy first to make sure you’re not gonna die from this.”  
+Chelsea: “Uh,, okay…?”
 
-Mark smirks at me as I walk back to the table.
+They open the box up and reveal tiny chocolate squares. And the good kind, too; they must’ve went to Zimmerman’s Sweets… I gasp lightly. Most of my family would die from eating this, but somehow my father and I got exempt from the chocolate allergy.
 
-Marty: "What was that all about?"
-Player: "Mark just told me some stuff, that's all."
-Marty: "Oh. I hope it was good."
+Chelsea: “Aww, no way! May I?”  
+Sam: “Please, do.”
 
-I hand Marty one of the cups and sit back down.
+Carefully, I pull off the helmet, set it aside, and reached into the box. I pull out a chocolate square and place it into my mouth. It melts instantaneously, letting the flavor get captured by my taste buds. *Dark chocolate: my favorite…*
 
-Player: "So, you're not a TV person..."
-Marty: "Oh, right. Yeah, I don't really like doing TV."
-Marty: "I don't really get how people can watch that for hours."
-Marty: "Especially reality TV. I can't stand that."
-Marty: "Just as bad as the romance novels my mother reads. Yuck."
-Player: "You got a distaste for romance novels?"
-Marty: "As much as I do my mother, [Player]."
-Marty: "She's against everything I am and everything I stand for."
-Marty: "No wonder my father and her got a divorce when I was a pu- toddler."
+Chelsea: “Mmm, so good…”
 
-(Choice)
+Sam cracks a smile and takes a square for themselves.
 
-- "Ptoddler? That's a new word."
-    - Marty: "Yeah, of course. As a linguist, I make up new words all the time!"
-    - Marty: "I'm kidding, I flubbed up. Respect to those that study linguistics, though."
-    - Player: "Ah, well, I'll disregard that, then."
-    - Player: "I've got plenty of friends that study linguistics."
-- "I'm sorry to hear that."
-    - Marty: "Don't fret over it, [Player]. It's not productive, really."
-    - Marty: "I don't let it bother me anymore."
-    - Marty: "Besides, I'm in a good place that accepts me and have a loving, supportive father."
-    - Player: "Well, that's good."
+Chelsea: “Did you know that dark chocolate was my favorite?”  
+Sam: “Yeah, Katy told me.”
 
-Player: "My apologies for switching gears here for a sec, but I forgot to ask this question last week."
-Player: "What pronouns do you go by?"
-Marty: "Oh! They/them or she/her is fine."
-Player: "Okay, thanks. I hear people use different ones."
-Marty: "Well, you wouldn't be wrong with your assumption."
-Marty: "Thanks for asking, though."
+I giggle lightly and reach into the box to grab another piece. To my surprise, Sam grabs a square and slides it into my mouth like a slot-loading CD drive. After letting that square melt in my mouth and swallowing, I smile and making whirring noises, as if I were reading a CD myself.
 
-Marty looks down at the cup they're holding.
+Sam cackles.
 
-(Choice)
+Sam: “What the hell is that?”  
+Chelsea: “What? I’m reading a chocolate square CD, silly.”  
+Sam: “You goofball…”  
+Chelsea: “You have to admit the impression was good, though.”  
+Chelsea: “I studied that sound from the vintage collection of Lotus computers I have at my place.”  
+Sam: “You collect vintage Lotus computers? Huh, that’s interesting.”  
+Chelsea: “Oh, of course! They had some wild colors back then. In fact…”
 
-- "Would you like me to get a straw for you?"
-    - Marty: "Nah, it's fine."
-- "Are you thinking about how to drink that?"
-    - Marty: "Nah, I kind of forgot this was in my hand."
+I get up and wriggle my way out of my hammer dress, revealing my outfit: a white blouse and leggings with that signature Bondi blue suit jacket and skirt.
 
-Marty unzips the hole they pointed out to me earlier. They take the up close to the hole and tilt back a bit, sipping the latte. After putting the cup down, they zip the hole back up.
+Sam: “Oh, my God, that outfit is just… so adorable!”  
+Chelsea: “Thanks! It took me a while to find the skirt and jacket with the right color.”  
+Chelsea: “I must’ve looked like a weirdo with a palette in my hand, matching the colors…”  
+Sam: “You think someone would notice?”  
+Chelsea: “I suppose not.”
 
-Player: "Well, you weren't lying about making it work."
-Marty: "Of course! You didn't think I'd lie to you about that, did you?"
-Player: "Not really."
-Player: "You haven't given me much reason to not trust you."
-Marty: "Good. I wouldn't want you to have issues trusting me, even with this costume on."
+I sit back down, cross my legs, and lean against Sam again.
 
-Marty looks out the window and watches the waves for a brief moment.
+Chelsea: “I really wanted to have shoes that match, but it’s just so bloody difficult for me.”  
+Sam: “Really? How come?”  
+Chelsea: “How many brands do you know that make shoes with anthros like me in mind?”
 
-Marty: "Could we head down to the beach in a little? I'd like to get closer to the waves."
-Player: "Sure, whatever you'd like."
-Marty: "Thanks. It's nice and soothing to sit there and watch."
-Player: "I agree. I watched them while waiting for you."
-Marty: "And that's before that guy tapped you on the shoulder. Now I understand why you got startled."
+Sam ponders for a while.
 
-We lightly chuckle.
+Sam: “Huh. I see your point.”  
+Chelsea: “I mean, I’d like to have a pair of ‘neutral’ sneakers along with my teal kicks here and the Greek goddess-like sandals I have back home.”  
+Chelsea: “But I just can’t find a pair that fits me, let alone ones that I like.”  
+Sam: “Oh. Sorry to hear that…”  
+Chelsea: “Eh, it is what it is. We’re always just an afterthought.”  
+Chelsea: “I’m lucky these ones have lasted as long as they have.”  
+Sam: “Well, you do look pretty cute wearing them…”
 
----
+I lightly giggle. *They sure know how to flatter me, that’s  for sure.*
 
-We spend some more time in the café and finish our lattes before making our way to the beach in front. I follow Marty to a spot in between the café and my apartment. Marty sits down, leans against the back wall, and crosses their legs. I take off my sandals and sit right next to them.
+Chelsea: “I know this is a tad sudden and we’ve only dated once or twice, but…”  
+Chelsea: “… can I cuddle with you?”  
+Sam: “Cuddle? Sure.”
 
-Marty: "The water's so pretty this evening. I could watch it all night."
-Player: "It really is with the sunset."
-Marty: "I'm surprised that not a lot of people are out and about on the beach."
-Player: "They're probably off somewhere else."
-Marty: "There's probably some event I must've forgotten about."
+Sam barely picks me up and places me in their lap. I stretch my legs out and cross them, delicately balancing my paws on top of their legs. Sam wraps their arms around me.
 
-Marty lightly giggles.
+Chelsea: “You make a good cuddle buddy, hehe…”
 
-Player: "Hmm, it probably might be that small fair happening at Booty Park."
+Sam smiles.
 
-Marty cackles.
+Sam: “I’ve been meaning to ask this, but how come you don’t have a tail?”  
+Chelsea: “I don’t really know. My family doesn’t have tails, so I guess we somehow evolved without them.”  
+Chelsea: “I guess mother nature said we’re fine without them. It makes finding clothes easier, that’s for sure…”  
+Sam: “I bet.”
 
-Player: "What? It's a real park on Federighi."
+The two of us bask in the sunlight and watch the trees swaying back and forth. Everything felt nice, quiet, and calm. I smile and rest my eyes for a little. This is definitely gonna work, I can feel it…
 
-Marty: "Is *that* what they called that park?"
-Marty: "I want to meet the mayor that decided to name that park what it is."
-Player: "What for?"
-Marty: "So I could find out what he had that night, and where I can get some."
-
-I laugh.
-
-Player: "Only the good stuff, Marty. Only the good stuff."
-Marty: "I'm sorry, you said something about an event happening at... "
-
-Marty stifles their laughter while trying to speak.
-
-Marty: "... Booty Park."
-Player: "Yeah. I think they're holding a small fair there."
-Player: "Or maybe it's a swap meet, I'm not sure."
-Player: "It happens every couple of months."
-Marty: "Well, this is the first I've heard such an event..."
-Marty: "You know, it's hard staying on top of things while trying to be outgoing."
-Player: "You're doing great."
-Marty: "Thanks for the validation."
-
-Marty leans in a little closer, falling short of landing their head on my shoulder.
-
-Marty: "Man, I can't believe it's August already! It feels like June was just starting yesterday..."
-Player: "I know. Where did the time go?"
-Marty: "Funny how time flies."
-Player: "Do you have anything planned for this month?"
-Marty: "No, not really. Maybe going to some concerts, but not much."
-Marty: "The fun stuff happens next month."
-Player: "What's next month?"
-Marty: "Just some activities I've signed up for..."
-
-Marty's head tilts down, likely in embarrassment.
-
-Player: "I feel like there's something else in September..."
-Player: "I hope you're not too embarrassed to tell me. But if you don't want to, that's fine."
-Marty: "Embarrassed? What gave you that idea?"
-Player: "You tilted your head down after I asked you about it. That and you're squirming a little."
-
-Marty sighs.
-
-Marty: "Alright, but you promise you won't tell anyone? I get anxious when more people know about it."
-Player: "Your secret is kept with me."
-
-Marty leans in closer.
-
-Marty: "I turn 100,000 next month."
-
-It takes me a second to realize what she means.
-
-Player: "Oh... it's your birthday next month..."
-Player: "May I ask why you get anxious about it?"
-Marty: "I... don't like drawing attention to myself around stuff like that."
-Marty: "I'm fine with getting a few beers with some friends. I don't need the fanfare."
-Player: "I understand. Don't worry, I won't throw any surprise parties for you."
-Marty: "Thanks. It means a lot to me."
-Player: "You're welcome. Also... you're nearly a hundred thousand years old?"
-
-Marty: "What? No, where'd you get that from?"
-Player: "Well, you said that..."
-
-I stop mid-sentence, realizing my mistake.
-
-Player: "That was binary, oh my god."
-
-I facepalm in embarrassment, while Marty cackles lightly. Marty's hand rests on my shoulder.
-
-Marty: "Haha, gotcha."
-Player: "So what you're saying is that you're turning 32."
-Marty: "Yeah, I know, I'm getting old. No need to rub it in."
-Player: "Well, you certainly have a sense of humor tonight."
-Marty: "Well, this is just the tip of the iceberg."
-Player: "I'm in for a ride."
-
-I look at the sunset, which is sitting halfway on the horizon.
-
-Player: "Also, I had no idea you knew binary."
-Player: "Did Katorin drill that into your head?"
-Marty: "No, no, I learned it elsewhere."
-Player: "Really? What for?"
-Marty: "It's a long story."
-Player: "I swear, you'll have a whole book's worth of content you're gonna have to tell me later."
-Marty: "Who says I don't already?"
-Player: "... true."
-
-As the sun's rays light up the beach and Marty's shoes by extension, I notice that Marty hasn't taken them off the entire time.
-
-Player: "... aren't you afraid of getting sand in your shoes?"
-Marty: "Eh, not really. It's better than getting dust and other stuff on my... skin."
-Player: "Couldn't you take a shower afterwards?"
-
-Marty looks at me without saying a word.
-
-Player: "Right. Long story."
-
-Marty gets up from the beach floor and brushes off the sides of their costume.
-
-Marty: "Well, I should probably get going. It's starting to get pretty late."
-Player: "Alright, Marty. Where do you want to meet up next time?"
-Marty: "How about Booty Park?"
-
-Marty stifles a laugh.
-
-Marty: "Nope, can't say that with a straight face. I don't know where it is, either."
-Player: "How about the pastry shop again?"
-Marty: "Sounds good to me, [Player]."
-Player: "Alright, then. Goodnight, Marty."
-
-Marty hugs me for a brief moment.
-
-Marty: "Goodnight, [Player]."
-
-Marty steps up on the wall and starts walking past the café. I get up from the beach floor and make my way over to my apartment. I can't help but feel I'm getting closer to them, ever so slightly. Maybe I will have to play detective and solve this mystery sooner or later. Nonetheless, this felt like a proper date, and I'm ready for the next one. Maybe they'll finally tell me some of those stories in that book of theirs.
+Sam: “God, you’re cute…”
