--- a/Shounin/Story Source/ch06.md
+++ b/Shounin/Story Source/ch06.md
@@ -1,398 +1,204 @@
-It's nearly been two weeks since Katorin and I checked on Chelsea. Thankfully, Marty did get back to me the day after and let me know that they couldn't meet until now. During that time, I've been focusing on self-care and learning some new technologies. I heard that Flutter was pretty good, so I've been learning that. During that time, I've also been thinking through that hypothesis I came up with. Almost everything seems to line up, and I have little doubt to believe that Marty and Chelsea are related in some way. Heck, maybe they are one and the same. Now that's a wild theory.
-
-In any case, it's not going to stop me from sprucing up my place a little. I scrub the counter tops and make sure I don't miss any rough spots. Marty hasn't responded in the past hour, so I am unsure if we're meeting up at all tonight. I finish scrubbing the last tough spot when I hear a knock on the door.
-
-Player: "Coming!"
-
-I stop what I'm doing, wash my hands, and walk over to the entrance door. To my surprise, Marty stands in the doorway.
-
-- Marty: "Hey."
-    - "I didn't realize you were coming up here to meet me."
-        - Marty: "I don't really feel like going anywhere right now."
-        - Marty: "Rather, I just want to talk..."
-    - "Are you alright?"
-        - Marty: "Yeah, mostly."
-        - Marty: "I know it's been, like, forever, since we've gone on a date."
-        - Marty: "But I just want to skip the pleasantries and talk..."
-
-Player: "Talk?"
-Marty: "There's... some things I want to get off my chest, that's all."
-Player: "Sure."
-
-I step aside and let Marty enter the apartment. As I close the door, Marty notices the spray cleaner on the counter.
-
-Marty: "Oh. Was I interrupting something?"
-Player: "Nah, I just wanted to spruce up the place a little before I met up with you."
-Player: "Just some self-care stuff, really."
-Marty: "Oh, that's nice. I could use a little myself."
-Player: "The sprucing, or...?"
-Marty: "These past few weeks have done a good number on me, [Player]."
-Marty: "I don't know how much dream therapy is gonna compensate for that."
-Player: "Dream therapy?"
-Marty: "Ehh, that's a long story. Maybe another time."
-
-Marty grabs a stool under the counter and sits on it, resting their elbows on the just-cleaned countertop.
-
-Marty: "So, my birthday's coming up..."
-Player: "Ah, right. It's in mid-September, isn't it?"
-Marty: "Right..."
-Marty: "My friends want to take me out for a couple of beers."
-Marty: "And I didn't realize it was on a Friday. But maybe this works out."
-Marty: "Maybe you want to go with me and meet my friends?"
-Player: "Sure, that sounds like a fun time."
-
-Marty looks down at the counter, likely in embarrassment.
-
-Player: "Is there something wrong?"
-Marty: "No, no, it's just..."
-Marty: "It'll be the first time we've been together when I'm not wearing this costume."
-Marty: "And I don't know how you're gonna react to that."
-
-Marty sighs and leans their helmet on their arms, crossed on the countertop.
-
-Marty: "I know you want to see what's under this thing."
-Marty: "And believe me, I want that, too."
-Marty: "I'm just... worried that you're not gonna like me after I take this helmet off."
-Player: "What makes you say that?"
-Marty: "Our relationship is different, [Player]. You just don't know *how* different."
-
-I take a seat on a stool next to theirs.
-
-Marty: "I really, really like you, [Player]. And I want to be with you."
-Marty: "This has been the best thing that could happen to me within the past few years."
-Marty: "But I'm scared it's gonna fall apart in a matter of seconds..."
-
-I can't tell if they're trying to get me to not go, or if they're looking for advice from me.
-
-- What should I say?
-    - "Do you want me to not go?"
-        - Marty: "What? No, that's not it."
-        - Marty: "It'll only be delaying the inevitable if you do that."
-        - Marty: "I just..."
-        - Marty: "Please, don't hate me when I take this off..."
-        - I get off the stool and hug Marty.
-        - Player: "You're very charming, funny, and very awkward, Marty."
-        - Player: "I don't think you taking off that costume is going to do much."
-        - Marty lightly sighs in relief.
-        - Marty: "Thanks for the reassurance."
-    - "Why not just keep the costume on?"
-        - Marty: "My friends have no idea about all of this, [Player]."
-        - Marty: "They'd probably think I'm keeping away from you or something."
-        - Marty: "I have to take this off for you if I'm gonna make this as 'normal' as possible."
-        - Player: "You're still going to be you either way."
-        - Player: "I care more about what's inside than the hammer itself."
-        - I poke at the helmet, unready to feel something squishy on the other end.
-        - Marty: "... did you just...?"
-        - Player: "Uh, I was not expecting there to be anything on the other side."
-        - Player: "Sorry about that. I didn't mean to do that..."
-        - Marty: "Ehehe... it's fine... just some tightly packed polyester fill, that's all!"
-        - It felt much more squishy than that, but I'll dismiss the thought to keep Marty happy.
-        - Player: "Alright, then."
-        - Marty seems much more at ease.
-    - "Do you trust me?"
-        - Marty: "Well, yeah, but... I don't know if you trust me, [Player]."
-        - Player: "I'm sure someone else that's in my position would probably not trust you."
-        - Player: "And, yeah, I had my doubts the first time we met."
-        - Marty looks to the side, embarrassed and nervous. I grab their hand.
-        - Player: "But I trust you."
-        - Player: "You're very charming, funny, and very awkward, Marty."
-        - Player: "As long as we trust each other, nothing's gonna happen when you take off that costume."
-        - Marty lightly sighs in relief.
-        - Marty: "Thanks for the reassurance."
+It’s been about a week or two since the event. I feel a bit better now, but it’s been hard catching up after being torn down like that. I feel like I’m always behind, and I’m exhausted. I don’t want to do anything too extravagant today; I hope Sam can work with that.
 
-Marty: "Well, I guess that settles it."
-Player: "Seems like it."
-Player: "Was there anything else you wanted to get off your chest?"
-Marty: "Well, uh..."
+> A knocking sound plays.
+> 
 
-Marty stares at me for a few solid seconds. Or at least I *think* they are.
+I stand in front of Sam’s door and knock, waiting patiently. Staring at my shoes, I sigh. I didn’t bother to put on an outfit that really matches the hammer head today, mostly because I’m just too tired to think of anything. I hope Sam doesn’t mind.
 
-Marty: "You know, I think you answered all of them."
-Player: "Well, I'm glad we were able to sort it all out."
-Marty: "Yeah..."
+Sam opens the door and greets me.
 
-Marty continues to seemingly stare at me until they eventually break out of it.
+Sam: “Hey. Didn’t realize you were coming here to meet me.”  
+Chelsea: “I would’ve called and all, but I’m… exhausted.”  
+Sam: “Oh. Are you alright?”  
+Chelsea: “Yeah, I’m fine.”  
+Sam: “Come in, please.”
 
-Marty: "Ah, sorry! I..."
-Marty: "I don't know what came over me there..."
-Player: "What?"
-Marty: "I was... uhh..."
-Marty: "Never mind that."
-Player: "Alright."
+Sam gestures and I step inside. I notice some spray cleaner on the counter as Sam closes the door behind me.
 
-I put the spray cleaner and roll of paper towels under the sink.
+Chelsea: “Oh, I’m sorry, I didn’t realize you were cleaning…”  
+Sam: “You’re fine. I was just about done, anyway.”
 
-Player: "How have the last couple of weeks been?"
-Marty: "All over the place."
-Player: "How come?"
-Marty: "Well, I was a train wreck for nearly a week."
-Marty: "And then just playing catch-up after that has been... exhausting."
-Marty: "I still feel so behind. I'm sorry that I couldn't do anything."
-Player: "Hey, as long as you're alright now, it's totally fine."
-Player: "Take whatever time you need to take care of yourself."
-Marty: "Gee, when was the last time I did that...?"
-Marty: "... sorry, that was weird and uncalled-for."
-Player: "You sure you're alright?"
+Sam puts the spray cleaner below the kitchen sink.
 
-Marty leans their head on their elbows again.
+Sam: “So, I’m guessing the past couple of weeks since I last saw you did a number, eh?”  
+Chelsea: “… yeah. It’s been a bit rough.”  
+Chelsea: “I always feel like I’m playing catch-up. No amount of dream therapy is gonna help fix that.”  
+Sam: “… dream therapy?”  
+Chelsea: “Long story.”
 
-Marty: "... no."
-Player: "Oh, dear..."
-Marty: "I'm just so bloody exhausted and anxious, and I haven't eaten since breakfast."
+The two of us take a seat on the couch. I take off my shoes and bring my legs up onto the couch.
 
-I sigh, grab my phone, and call the local pizzeria.
+Sam: “So, what’s up with this ‘dream therapy’ thing?”  
+Chelsea: “Oh, it’s just that one game I’ve been playing a while.”  
+Sam: “Oh, I see…”  
+Sam: “So, uh, is there anything you’d like to do?”
 
-Player: "Yes, I'd like to place an order for two pies. One cheese and one pepperoni."
+I scoot towards Sam and lean on their side.
 
-Marty lifts their head slightly in confusion while I continue talking on the phone.
+Chelsea: “Not really…”  
+Sam: “How about a chill day, then? We can order some pizza and do something here.”  
+Chelsea: “A chill day… I’d like that.”
 
-Player: "Sounds good, thanks."
+Part of me wants to take off the helmet, but I feel really lazy right now. *Oh well*. As I readjust myself to cuddle with Sam, they pull me closer and rub my arm.
 
-I hang up the phone and place it on the table.
+Sam: “Wow, you must be really exhausted if you took your helmet off…”  
+Chelsea: “I… didn’t really even bother with matching my outfit today.”  
+Sam: “I’m not so sure. At least you look comfortable in those black sweatpants.”
 
-Player: "Pizza should get here in about forty-five minutes."
-Marty: "[Player], y-you didn't have to do that..."
-Player: "You need food in your stomach. Maybe a nap, too."
-Marty: "B-but..."
+I quietly giggle.
 
-Marty tries to defend themselves, but aren't able to and give up in defeat.
+Sam: “You look like you need a nap. You want me to grab some pillows, or…?”  
+Chelsea: “… a nap…”
 
-Marty: "Alright..."
-Player: "I want to make sure you're alright."
+Just the thought of a nap already puts me out of it.
 
-I poke at the helmet, unready to feel something squishy on the other end.
-Marty: "... did you just...?"
-Player: "Uh, I was not expecting there to be anything on the other side."
-Player: "Sorry about that. I didn't mean to do that..."
-Marty: "Ehehe... it's fine... just some tightly packed polyester fill, that's all!"
-It felt much more squishy than that, but I'll dismiss the thought to keep Marty happy.
-Player: "Alright, then."
+Sam: “Yeah, you really do need one. Let me grab some pillows.”
 
-Player: "Here, let's head into the living area."
+I adjust myself as Sam gets up from the couch to grab pillows. Man, I’m having a hard time keeping my eyes open… Before I know it, my head falls onto a pillow, and I’m sprawled out on the couch. I can hear Sam giggle for a moment.
 
-I guide Marty off the stool and into the living area. While I sit down on the armchair, Marty takes the couch, keeping to themselves.
+Sam: “Yeah, you desperately need it. You stay here and rest.”  
+Sam: “I’m gonna order some pizza and read in the chair over here.”  
+Sam: “Oh, and let me get this over you.”
 
-Player: "You're not going to feel any better if you stay tense like that."
-Player: "I'm staying on the armchair."
-Marty: "... are you sure? I don't want to invade your space or anything..."
-Player: "Marty, you need some space to breathe and relax."
-Player: "I'm trying to offer that to you. Nothing is going to happen; I'll make sure of it."
-Marty: "... alright. But if something does happen..."
-Player: "Which it won't..."
-Marty: "The helmet. Stays. On."
+Sam pulls a blanket that draped over the back of the couch and slides it over me. *God, it feels so soft and fuzzy…*
 
-I let out a frustrated sigh.
+Chelsea: “… nap time…”
 
-Marty: "Look, I'm just making sure. It's too early for that kind of stuff to happen anyway."
-Player: "You had no problem sleeping right on me two weeks ago."
-Marty: "That was different! And it happened completely by accident!"
-Marty: "And besides, I was all bundled up in this costume."
-Player: "Marty?"
-Marty: "..."
-Player: "Just take a nap. Like, seriously."
-Player: "You're only going to exhaust yourself further."
-Marty: "... Fine."
-Player: "Would you like a blanket?"
-
-Marty takes off their shoes, slowly swings their legs up on the couch, and zips up their feet like weeks ago.
-
-Player: "... right. I forgot."
-
-I hear a knock on the door.
-
-Player: "I'll get it."
-
-I walk over to the door and open it, surprised to see Katorin at the door.
-
-Katorin: "[Player]! Hey!"
-Player: "Uh, hi..."
-Player: "Just give me a second and I'll come out into the hallway."
-
-I gently close the door and walk over to Marty.
-
-Marty: "... was that Katorin?"
-Player: "Yeah, but don't you worry."
-Player: "I'll talk to her outside, so you can enjoy some uninterrupted peace and quiet."
-Marty: "Okay."
-
-As Marty gets comfortable and puts their helmet on a pillow, I walk back to the door, open it, and step outside. I try to make sure I close the door as quietly as possible.
-
-Player: "What's up?"
-Katorin: "Just wanted to check how you're doing."
-Player: "I'm fine. But I know there's something..."
-Katorin: "Oh, right! Chelsea's birthday's coming up in mid-September, and we were planning to get drinks with her."
-Player: "Really? When is that?"
-Katorin: "I think it's on a Friday. Let me check."
-
-Katorin checks her phone.
-
-Katorin: "Yup, it is."
-
-Weird. Chelsea and Marty have birthdays on the same day, and they're both planning very similar parties? Something isn't adding up.
-
-Player: "Huh. Noted."
-Katorin: "I was wondering if you wanted to join us."
-Player: "Hmm, I'm actually busy that night. Marty's also doing something special for their birthday."
-Katorin: "Ah. That's fine, you can just jump between tables or something."
-Katorin: "Speaking of which..."
-Katorin: "Have you heard anything from Chelsea?"
-Player: "Well, no, but I'd like to imagine she's doing fine."
-Player: "Well, maybe she's as exhausted as Marty is."
-Katorin: "Ah, okay. I thought she might've told yo- wait, what?"
-Katorin: "What does Marty have to do with this?"
-Player: "I think Marty and Chelsea have gone through similar things the past couple of weeks."
-Katorin: "Huh. I wonder what gave you the idea."
-Player: "Well, Marty told me they've been really exhausted from playing catch-up."
-Player: "And given Chelsea's state of mind a couple of weeks ago, I could-"
-
-I pause for a moment and listened to my own statement. How could Chelsea and Marty have had similar experiences the past couple of weeks? That doesn't make any sense. Unless...
-
-Player: "... see... why."
-Katorin: "Are you alright, [Player]?"
-
-*No, they can't be...*
-
-Player: "... Sweet Federighi..."
-Katorin: "What is it, [Player]?"
-
-There's no other way it could be: Marty and Chelsea are the same person. *Marty is Chelsea*. Everything's starting to make sense now. The way Marty acts, the costume, the incident from weeks ago...
-
-Katorin: "[Player]! Hello?"
-
-I snap out of my thoughts and return to reality, realizing that, among many things, Katorin is waving her hand in front of me.
-
-Player: "Gah!"
-
-As a knee-jerk reaction, I push her hand away.
-
-Katorin: "Are you alright? You've been staring off into the void."
-Player: "Yeah, I'm fine. I just thought of something."
-Katorin: "Oh... I'm sorry, I didn't realize you were having an epiphany."
-Player: "It's fine, really. You just helped me realize something."
-Player: "In that case, I think I can make it."
-Katorin: "Ah, well, I'll let everyone else know."
-Katorin: "You're planning to get her anything?"
-Player: "Yeah, of course."
-Katorin: "Ooh, any ideas?"
-Player: "I'll figure it out. Is there anything else, Katorin?"
-Katorin: "No, that settles it."
-Player: "Alright. I'm heading back inside and checking on Marty. I want to make sure they haven't fallen off the couch."
-Katorin: "Sounds like a good idea. See ya, [Player]."
-Player: "See ya."
-
-I step inside, replaying my thoughts. There's a small chance I'm wrong and things just happen to overlap really well. But there's no way this is all coincidence, it must be that Chelsea is under that costume. But then that leaves on question: what in the world did I touch when I poked her helmet?
-
-(brief pause)
-
-Oh... that was her snoot. And I booped it. Whoops.
-
-I head over to the armchair and take a seat, checking that Marty, well... possibly Chelsea, didn't roll off the couch. Thankfully, they're sound asleep on the couch. I sigh in relief, grab my laptop from my room, and continue with the Flutter tutorials until the pizza arrives.
-
-As soon as I hear a knock on the door, I get up and rush to the door. I greet the delivery person, hand them the money, and take the pizzas from their hands. After placing them on the counter and wiping my hands clean with a paper napkin, I walk over to Marty and gently nudge them.
-
-Player: "Hey, the pizza's here."
-
-Marty struggles to form words as they slowly rise.
-
-Marty: "... pizza... time?"
-Player: "Yeah. You can stay here, I'll bring a plate over for you."
-
-Marty shakes themselves awake and sit upright while I go back to the kitchen. I grab both a cheese and pepperoni slice, place it on the plate, and make my way back to the living room to hand it to Marty.
-
-Player: "Here. I'll bring napkins in just a second."
-
-I walk back to the kitchen to make a plate for myself and grab napkins. Carefully, I make my way back with everything still intact. I set the napkins down on the table and take a seat in the armchair. Marty awkwardly puts a slice into the hole they've unzipped.
-
-Player: "Goodness, that looks so awkward, Marty."
-
-Marty tries to giggle without choking on their food. Marty finishes their bite, places the slice down on their plate, and grabs a napkin.
-
-Marty: "Believe me, it's as awkward as it looks..."
-Player: "I can imagine so. How's the pizza?"
-Marty: "Nice and warm. Thanks for feeding me, [Player]."
-
-I imagine a smile coming from under the helmet. As soon as Marty picks up their slice, I hear a phone ring to the tune of "Advice For The Young At Heart".
-
-Player: "Is that your phone, Marty?"
-Marty: "Oh, yeah. Bloody hell, I forgot to put my phone on silent..."
-Marty: "It's probably Katorin."
-
-Marty sets down the slice and tries to maneuver around in their costume to grab their phone. They manage to get the phone to fall down to the floor, where they zipped up the stub. Marty nearly slips, catching themselves on the couch.
-
-Marty: "Hey [Player], your hands are still clean."
-Marty: "Could you, uh, unzip my stub for me?"
-Marty: "I nearly slipped on my phone and I can't grab it."
-Player: "Sure."
-
-I walk over to Marty, bend down, and unzip the zipper around the circumference of the costume. The phone promptly falls to the floor, with the ringtone now audible. As I pick up the phone from the floor, I notice that their toes are shaped differently from a human's, which confirmed my suspicions. I shake my head and stand back up to give the phone to Marty, who had wiped their hands. They take the phone from my hands and answer it.
-
-Marty: "Hello?"
-
-I walk back over to the armchair.
-
-Marty: "Oh, yeah, that's cool with me."
-Marty: "The girlfriend can come along, too."
-
-I start eating one slice from my plate while Marty talks on the phone a little longer.
-
-Marty: "He doesn't need to get my anything, Katorin."
-Marty: "Hey, uh, I'm at my boyfriend's right now, and I just woke up from a nap."
-Marty: "Can I call you back later?"
-
-Marty looks in my general direction and nods to simulate an eye roll.
-
-Marty: "Thanks. Talk to you later. Bye."
-
-Marty puts down the phone and picks up their plate.
-
-Marty: "Sorry about that. Katorin was telling me another friend was coming to drinks along with their girlfriend, possibly."
-Player: "Don't worry. Katorin tends to show up at inopportune times."
-Marty: "Yeah..."
-
-Marty grabs one of the slices from their plate and performs the awkward ritual to eat it with the helmet on as I take another bite of mine.
-
-Marty: "I've been wondering if I should change my ringtone at some point."
-Player: "Why would you want to? Your current one seems very fitting."
-Marty: "It makes random calls at two in the morning pretty weird."
-Player: "Who's calling you at two in the morning?"
-Marty: "Usually my friends. Sometimes a scammer."
-Player: "Oh. I wonder why that is."
-Marty: "They like to make sure I'm alive."
-Marty: "Now that I think about it, maybe I shouldn't change it."
-Marty: "I don't think I'll ever find a good replacement for the one I have."
-
-Marty takes another bite. I lightly chuckle, still unable to get over how it looks when Marty eats with the costume on.
-
-Marty: "What's so funny?"
-Player: "I still can't get over that."
-Marty: "I'm sure that reaction's gonna change in a few weeks. Maybe a month at the very least."
+Sam bends over to my head and kisses my helmet where my cheek would be. And, just like that, I’ve drifted to sleep…
 
 ---
 
-We continue talking for a while and eating the pizza slices. There's still nearly a box's worth of pizza left. I'll just let Marty take that home with them. After cleaning up the table and wrapping up dinner, we walk back to the living room and take our respective places. I look up at Marty while they watch me grab my laptop from the table and open it.
+Sam: “Hey, Chelsea…”
 
-Player: "How are you feeling now?"
-Marty: "Full. And ready to drift off again."
-Marty: "I'm sorry for being so tired..."
-Player: "You're more than welcome to take another nap on the couch."
+*Ugh, what happened…?* My eyes open slowly, though I can barely see anything. Oh, right; I forgot I had the helmet on. But I can still see Sam in front of me.
 
-I re-open the little demo app I had been working on for a while.
+Chelsea: “How long have I been asleep for?”  
+Sam: “About half an hour.”  
+Chelsea: “Oh…”  
+Sam: “Don’t worry too much about it. I could tell you really needed it.”  
+Sam: “The pizza’s here. You want a slice of the cheese or the pepperoni one?”  
+Sam: “I wasn’t sure which one you liked, so I grabbed both just in case.”
 
-Marty: "I'm sorry for intruding, but what are you working on?"
-Player: "Oh, I'm just playing around with some new tech stuff. Well, new for me."
-Marty: "... can I watch?"
-Player: "Oh, um, sure..."
+I slowly get up from the couch and stretch.
 
-I get up from my designated spot and walk over to the couch. Marty scoots over to make space for me. As I sit down on the couch, Marty scoots back and places their helmet on my shoulder, looking down at the laptop.
+Chelsea: “Pepperoni sounds good, thanks.”  
+Sam: “Sure thing, I’ll get you a plate.”
 
-Marty: "Are you okay with this?"
-Player: "Yeah, it's fine."
-Marty: "What is this? I've never seen syntax like that before..."
-Player: "Flutter. Supposed to make mobile app development easier, apparently."
-Marty: "Oh. This looks so different..."
-Marty: "Maybe I'll just watch you do this."
-Player: "That's fine, Marty."
+While Sam goes to the counter, I pull off the helmet and set it aside on the couch. I rub my eyes, hoping I could wake up a bit more. Despite the struggle, I feel well rested; I haven’t felt that in a while.
 
-I quickly put on some lo-fi music and switch back to my editor. Marty moves their helmet slightly to get more comfortable on my shoulder while I type away. Fifteen minutes pass, and Marty is sound asleep on my shoulder. I can faintly hear their breathing while I keep working and trying all sorts of things.
+Sam brings me a plate with a slice of pie on it and sets a small ceramic cup on the table.
 
-Night falls rather quickly, and I'm feeling just as tired myself. I close the laptop, put it on the table, and shut my eyes for a brief moment. All things considered, this feels nice. I hope Marty is able to feel well-rested after this. I start to doze off, dreaming about what my life could be like if Chelsea and I were together. It doesn't seem that far off, if my theory holds true, and I, for one, would be fine with it. I guess I'll find out soon enough.
+Chelsea: “Thanks…”  
+Sam: “I don’t have soda or anything like that, but I made some tea.”  
+Chelsea: “Tea?”  
+Sam: “Yeah. Passionfruit.”
+
+Sam takes a seat next to me and lets me rest on their shoulder. I take a bite from the slice and hold the plate in place, catching any grease that might have fallen. I hear Sam giggle lightly.
+
+Chelsea: “Hmm?”  
+Sam: “Sorry, uh… it’s just…”  
+Chelsea: “What is it?”  
+Sam: “You look really cute eating. Sorry, it’s weird, but…”  
+Chelsea: “Oh, no, you’re fine.”
+
+I take a few more bites and sip on my tea.
+
+Chelsea: “Ooh…”
+
+*That’s really nice…* My stomach feels nice and warm.
+
+Sam: “That’s a relief. I wasn’t sure if you’d like that particular flavor.”
+
+Sam takes a few more bites. *They’re trying really hard to not crack a smile while doing it, I can tell…* I giggle and take another bite from my slice.
+
+Sam: “You’re really cute, you know that?”
+
+I’m still chewing, so I smile and giggle in lieu of a verbal response. I *want to hold these warm and fuzzy feelings for as long as I can…*
+
+Sam: “Hey…”
+
+I adjust myself and look into Sam’s eyes. Sam turns their head down and kisses the top of my muzzle.
+
+Sam: “I love you.”  
+Chelsea: “Aww, I love you, too…”
+
+I rub the side of my face against their chest. *This is it; they did the thing…* I couldn’t possibly feel any better than I am right now. We’re a couple now, that’s for sure.
+
+---
+
+Sam and I spend some more time eating the pizza and enjoying each other’s company as the time passes. This is exactly what I needed. Not bad for just a ‘chill day’…
+
+We finish eating and clean up a little before returning to the couch. I cuddle up next to them again, though they push me directly onto their lap instead.
+
+Sam: “So, it’s the beginning of September. Don’t you have a birthday coming up soon?”  
+Chelsea: “Yeah… it’s in a couple of weeks.”  
+Sam: “Are you planning everything or just laying low?”  
+Chelsea: “Well, uh… I haven’t really though about it…”  
+Sam: “Oh, okay. If you want, I could make a nice dinner for you.”  
+Sam: “Nothing too fancy or anything. Just the two of us here.”  
+Chelsea: “Thanks…”
+
+I’m glad they understand and aren’t pushing too hard for anything. Even Katorin and some of my other friends get a little antsy.
+
+Sam: “So, is there anything you’d like to do now?”  
+Chelsea: “You know, there’s this one game I’ve been meaning to play, but…”  
+Chelsea: “It, uh, requires two people to play it.”  
+Sam: “Sure, I don’t mind.”  
+Chelsea: “Thanks.”
+
+I pull out my little console and flip up the kickstand. While the game starts, I hand Sam one of the mini controllers and lay on the couch, crossing my legs.
+
+Chelsea: “You make a really good pillow substitute.”  
+Sam: “Oh, do I?”  
+Sam: “Say, you want me to put the blanket over you again?”
+
+I grab the blanket and throw it over myself, ignoring the fact that my paws weren’t covered.
+
+Sam: “Aren’t your paws gonna get cold?”  
+Chelsea: “It’s fine, really. My toes are still warm.”  
+Sam: “Did you decide to paint your nails?”  
+Chelsea: “I’ve just put a clear coat on. Found some clear polish in the back of the cabinet.”  
+Sam: “Ah.”
+
+The game starts right away, skipping the menu entirely. Just like that, our little characters are running around the screen as we mess around with the controllers.
+
+Chelsea: “Huh, there’s no menu. I wasn’t expecting that.”  
+Sam: “Me either.”
+
+---
+
+We spend the next couple of hours playing the game. It was both parts enlightening and challenging. I’ve played instruction-less puzzle games like this before, but never in a cooperative capacity. I had a lot of fun with it, though I’m not sure if Sam feels the same way.
+
+Sam: “Well, congrats, you broke my brain somehow.”  
+Chelsea: “Haha, it’s okay…”
+
+I prop myself up on the couch and lean against Sam again.
+
+Sam: “Hey, at least I enjoyed it.”
+
+Sam boops my muzzle as I giggle. For a brief moment, we lock on to each other’s eyes, drowning everything else out. And, before we know it… We kissed. And not just a small peck or anything, but a full, wholehearted kiss. My first one, at that. And, was it delightful…
+
+Sam: “Well, uh, that was quite the…”
+
+We both giggle and go at it again, this time for longer. I’ve never felt this intimately close with anyone. It’s a strangely satisfying feeling. A few minutes pass before we wean off and lay together on the couch.
+
+Sam: “You know, I’ve had my fair share of puppy kisses before, but…”  
+Sam: “Never like that. You seem like an expert at this.”  
+Chelsea: “I, uhh… that was my first one, hehe…”  
+Sam: “Honestly, same. Never could get close like that.”
+
+I smile and hug Sam.
+
+Chelsea: “This couch is too bloody comfortable. Now I don’t want to get up.”  
+Sam: “You could stay the night, if you want.”  
+Chelsea: “You’d let me?”  
+Sam: “I don’t mind.”  
+Chelsea: “Thanks. I appreciate it...”
+
+I cuddle next to them and smile.
+
+Sam: “You’re definitely doing a good job at radiating off that happy energy of yours.”  
+Chelsea: “Hmm? What makes you say that?”  
+Sam: “I can feel you wiggling your toes.”
+
+The two of us look at each other before bursting into laughter and giving each other a quick smooch. *God, I love them so much…*
